@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -53,8 +53,6 @@ import org.springframework.beans.factory.xml.XmlReaderContext;
 import org.springframework.core.io.DescriptiveResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.EncodedResource;
-import org.springframework.lang.Nullable;
-import org.springframework.util.Assert;
 import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
 
@@ -151,10 +149,8 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 
 	private MetaClass metaClass = GroovySystem.getMetaClassRegistry().getMetaClass(getClass());
 
-	@Nullable
 	private Binding binding;
 
-	@Nullable
 	private GroovyBeanDefinitionWrapper currentBeanDefinition;
 
 
@@ -207,7 +203,6 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	/**
 	 * Return a specified binding for Groovy variables, if any.
 	 */
-	@Nullable
 	public Binding getBinding() {
 		return this.binding;
 	}
@@ -249,9 +244,8 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		}
 
 		@SuppressWarnings("serial")
-		Closure<Object> beans = new Closure<>(this) {
+		Closure<Object> beans = new Closure<Object>(this) {
 			@Override
-			@Nullable
 			public Object call(Object... args) {
 				invokeBeanDefiningClosure((Closure<?>) args[0]);
 				return null;
@@ -324,8 +318,8 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 			if (!ObjectUtils.isEmpty(args)) {
 				int index = args.length;
 				Object lastArg = args[index - 1];
-				if (lastArg instanceof Closure<?> closure) {
-					callable = closure;
+				if (lastArg instanceof Closure<?>) {
+					callable = (Closure<?>) lastArg;
 					index--;
 				}
 				constructorArgs = resolveConstructorArguments(args, 0, index);
@@ -383,23 +377,23 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	@Override
 	public Object invokeMethod(String name, Object arg) {
 		Object[] args = (Object[])arg;
-		if ("beans".equals(name) && args.length == 1 && args[0] instanceof Closure<?> closure) {
-			return beans(closure);
+		if ("beans".equals(name) && args.length == 1 && args[0] instanceof Closure) {
+			return beans((Closure<?>) args[0]);
 		}
 		else if ("ref".equals(name)) {
 			String refName;
 			if (args[0] == null) {
 				throw new IllegalArgumentException("Argument to ref() is not a valid bean or was not found");
 			}
-			if (args[0] instanceof RuntimeBeanReference runtimeBeanReference) {
-				refName = runtimeBeanReference.getBeanName();
+			if (args[0] instanceof RuntimeBeanReference) {
+				refName = ((RuntimeBeanReference) args[0]).getBeanName();
 			}
 			else {
 				refName = args[0].toString();
 			}
 			boolean parentRef = false;
-			if (args.length > 1 && args[1] instanceof Boolean bool) {
-				parentRef = bool;
+			if (args.length > 1 && args[1] instanceof Boolean) {
+				parentRef = (Boolean) args[1];
 			}
 			return new RuntimeBeanReference(refName, parentRef);
 		}
@@ -427,7 +421,6 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 
 	private boolean addDeferredProperty(String property, Object newValue) {
 		if (newValue instanceof List || newValue instanceof Map) {
-			Assert.state(this.currentBeanDefinition != null, "No current bean definition set");
 			this.deferredProperties.put(this.currentBeanDefinition.getBeanName() + '.' + property,
 					new DeferredProperty(this.currentBeanDefinition, property, newValue));
 			return true;
@@ -437,11 +430,11 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 
 	private void finalizeDeferredProperties() {
 		for (DeferredProperty dp : this.deferredProperties.values()) {
-			if (dp.value instanceof List<?> list) {
-				dp.value = manageListIfNecessary(list);
+			if (dp.value instanceof List) {
+				dp.value = manageListIfNecessary((List<?>) dp.value);
 			}
-			else if (dp.value instanceof Map<?, ?> map) {
-				dp.value = manageMapIfNecessary(map);
+			else if (dp.value instanceof Map) {
+				dp.value = manageMapIfNecessary((Map<?, ?>) dp.value);
 			}
 			dp.apply();
 		}
@@ -469,7 +462,8 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	 */
 	private GroovyBeanDefinitionWrapper invokeBeanDefiningMethod(String beanName, Object[] args) {
 		boolean hasClosureArgument = (args[args.length - 1] instanceof Closure);
-		if (args[0] instanceof Class<?> beanClass) {
+		if (args[0] instanceof Class) {
+			Class<?> beanClass = (Class<?>) args[0];
 			if (hasClosureArgument) {
 				if (args.length - 1 != 1) {
 					this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(
@@ -479,21 +473,22 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 					this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName, beanClass);
 				}
 			}
-			else {
+			else  {
 				this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(
 						beanName, beanClass, resolveConstructorArguments(args, 1, args.length));
 			}
 		}
-		else if (args[0] instanceof RuntimeBeanReference runtimeBeanReference) {
+		else if (args[0] instanceof RuntimeBeanReference) {
 			this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName);
-			this.currentBeanDefinition.getBeanDefinition().setFactoryBeanName(runtimeBeanReference.getBeanName());
+			this.currentBeanDefinition.getBeanDefinition().setFactoryBeanName(((RuntimeBeanReference) args[0]).getBeanName());
 		}
-		else if (args[0] instanceof Map<?, ?> namedArgs) {
+		else if (args[0] instanceof Map) {
 			// named constructor arguments
-			if (args.length > 1 && args[1] instanceof Class<?> clazz) {
+			if (args.length > 1 && args[1] instanceof Class) {
 				List<Object> constructorArgs =
-						resolveConstructorArguments(args, 2, (hasClosureArgument ? args.length - 1 : args.length));
-				this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName, clazz, constructorArgs);
+						resolveConstructorArguments(args, 2, hasClosureArgument ? args.length - 1 : args.length);
+				this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName, (Class<?>) args[1], constructorArgs);
+				Map<?, ?> namedArgs = (Map<?, ?>) args[0];
 				for (Map.Entry<?, ?> entity : namedArgs.entrySet()) {
 					String propName = (String) entity.getKey();
 					setProperty(propName, entity.getValue());
@@ -503,7 +498,7 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 			else {
 				this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName);
 				// First arg is the map containing factoryBean : factoryMethod
-				Map.Entry<?, ?> factoryBeanEntry = namedArgs.entrySet().iterator().next();
+				Map.Entry<?, ?> factoryBeanEntry = ((Map<?, ?>) args[0]).entrySet().iterator().next();
 				// If we have a closure body, that will be the last argument.
 				// In between are the constructor args
 				int constructorArgsTest = (hasClosureArgument ? 2 : 1);
@@ -528,7 +523,7 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		}
 		else {
 			List<Object> constructorArgs =
-					resolveConstructorArguments(args, 0, (hasClosureArgument ? args.length - 1 : args.length));
+					resolveConstructorArguments(args, 0, hasClosureArgument ? args.length - 1 : args.length);
 			this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName, null, constructorArgs);
 		}
 
@@ -552,14 +547,14 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 			if (constructorArgs[i] instanceof GString) {
 				constructorArgs[i] = constructorArgs[i].toString();
 			}
-			else if (constructorArgs[i] instanceof List<?> list) {
-				constructorArgs[i] = manageListIfNecessary(list);
+			else if (constructorArgs[i] instanceof List) {
+				constructorArgs[i] = manageListIfNecessary((List<?>) constructorArgs[i]);
 			}
-			else if (constructorArgs[i] instanceof Map<?, ?> map){
-				constructorArgs[i] = manageMapIfNecessary(map);
+			else if (constructorArgs[i] instanceof Map){
+				constructorArgs[i] = manageMapIfNecessary((Map<?, ?>) constructorArgs[i]);
 			}
 		}
-		return List.of(constructorArgs);
+		return Arrays.asList(constructorArgs);
 	}
 
 	/**
@@ -624,9 +619,10 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		if (addDeferredProperty(name, value)) {
 			return;
 		}
-		else if (value instanceof Closure<?> callable) {
+		else if (value instanceof Closure) {
 			GroovyBeanDefinitionWrapper current = this.currentBeanDefinition;
 			try {
+				Closure<?> callable = (Closure<?>) value;
 				Class<?> parameterType = callable.getParameterTypes()[0];
 				if (Object.class == parameterType) {
 					this.currentBeanDefinition = new GroovyBeanDefinitionWrapper("");
@@ -643,7 +639,6 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 				this.currentBeanDefinition = current;
 			}
 		}
-		Assert.state(this.currentBeanDefinition != null, "No current bean definition set");
 		this.currentBeanDefinition.addProperty(name, value);
 	}
 
@@ -658,7 +653,6 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	 * </ul>
 	 */
 	@Override
-	@Nullable
 	public Object getProperty(String name) {
 		Binding binding = getBinding();
 		if (binding != null && binding.hasVariable(name)) {
@@ -701,7 +695,6 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		}
 	}
 
-	@SuppressWarnings("NullAway")
 	private GroovyDynamicElementReader createDynamicElementReader(String namespace) {
 		XmlReaderContext readerContext = this.groovyDslXmlBeanDefinitionReader.createReaderContext(
 				new DescriptiveResource("Groovy"));
@@ -733,10 +726,9 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 
 		private final String name;
 
-		@Nullable
 		public Object value;
 
-		public DeferredProperty(GroovyBeanDefinitionWrapper beanDefinition, String name, @Nullable Object value) {
+		public DeferredProperty(GroovyBeanDefinitionWrapper beanDefinition, String name, Object value) {
 			this.beanDefinition = beanDefinition;
 			this.name = name;
 			this.value = value;
@@ -769,7 +761,6 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		}
 
 		@Override
-		@Nullable
 		public Object getProperty(String property) {
 			if (property.equals("beanName")) {
 				return getBeanName();
@@ -777,9 +768,12 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 			else if (property.equals("source")) {
 				return getSource();
 			}
-			else {
+			else if (this.beanDefinition != null) {
 				return new GroovyPropertyValue(
 						property, this.beanDefinition.getBeanDefinition().getPropertyValues().get(property));
+			}
+			else {
+				return this.metaClass.getProperty(this, property);
 			}
 		}
 
@@ -809,10 +803,9 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 
 			private final String propertyName;
 
-			@Nullable
 			private final Object propertyValue;
 
-			public GroovyPropertyValue(String propertyName, @Nullable Object propertyValue) {
+			public GroovyPropertyValue(String propertyName, Object propertyValue) {
 				this.propertyName = propertyName;
 				this.propertyValue = propertyValue;
 			}
