@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,20 +19,15 @@ package org.springframework.core.io;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UncheckedIOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
-import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
-import org.springframework.util.ResourceUtils;
 import org.springframework.util.StringUtils;
 
 /**
@@ -41,14 +36,10 @@ import org.springframework.util.StringUtils;
  * case of the {@code "file:"} protocol.
  *
  * @author Juergen Hoeller
- * @author Sam Brannen
  * @since 28.12.2003
  * @see java.net.URL
  */
 public class UrlResource extends AbstractFileResolvingResource {
-
-	private static final String AUTHORIZATION = "Authorization";
-
 
 	/**
 	 * Original URI, if available; used for URI and File access.
@@ -62,10 +53,10 @@ public class UrlResource extends AbstractFileResolvingResource {
 	private final URL url;
 
 	/**
-	 * Cleaned URL String (with normalized path), used for comparisons.
+	 * Cleaned URL (with normalized path), used for comparisons.
 	 */
 	@Nullable
-	private volatile String cleanedUrl;
+	private volatile URL cleanedUrl;
 
 
 	/**
@@ -93,60 +84,46 @@ public class UrlResource extends AbstractFileResolvingResource {
 	}
 
 	/**
-	 * Create a new {@code UrlResource} based on a URI path.
+	 * Create a new {@code UrlResource} based on a URL path.
 	 * <p>Note: The given path needs to be pre-encoded if necessary.
-	 * @param path a URI path
-	 * @throws MalformedURLException if the given URI path is not valid
-	 * @see ResourceUtils#toURI(String)
+	 * @param path a URL path
+	 * @throws MalformedURLException if the given URL path is not valid
+	 * @see java.net.URL#URL(String)
 	 */
 	public UrlResource(String path) throws MalformedURLException {
 		Assert.notNull(path, "Path must not be null");
-		String cleanedPath = StringUtils.cleanPath(path);
-		URI uri;
-		URL url;
-
-		try {
-			// Prefer URI construction with toURL conversion (as of 6.1)
-			uri = ResourceUtils.toURI(cleanedPath);
-			url = uri.toURL();
-		}
-		catch (URISyntaxException | IllegalArgumentException ex) {
-			uri = null;
-			url = ResourceUtils.toURL(path);
-		}
-
-		this.uri = uri;
-		this.url = url;
-		this.cleanedUrl = cleanedPath;
+		this.uri = null;
+		this.url = new URL(path);
+		this.cleanedUrl = getCleanedUrl(this.url, path);
 	}
 
 	/**
 	 * Create a new {@code UrlResource} based on a URI specification.
 	 * <p>The given parts will automatically get encoded if necessary.
-	 * @param protocol the URL protocol to use (for example, "jar" or "file" - without colon);
+	 * @param protocol the URL protocol to use (e.g. "jar" or "file" - without colon);
 	 * also known as "scheme"
-	 * @param location the location (for example, the file path within that protocol);
+	 * @param location the location (e.g. the file path within that protocol);
 	 * also known as "scheme-specific part"
 	 * @throws MalformedURLException if the given URL specification is not valid
 	 * @see java.net.URI#URI(String, String, String)
 	 */
-	public UrlResource(String protocol, String location) throws MalformedURLException {
+	public UrlResource(String protocol, String location) throws MalformedURLException  {
 		this(protocol, location, null);
 	}
 
 	/**
 	 * Create a new {@code UrlResource} based on a URI specification.
 	 * <p>The given parts will automatically get encoded if necessary.
-	 * @param protocol the URL protocol to use (for example, "jar" or "file" - without colon);
+	 * @param protocol the URL protocol to use (e.g. "jar" or "file" - without colon);
 	 * also known as "scheme"
-	 * @param location the location (for example, the file path within that protocol);
+	 * @param location the location (e.g. the file path within that protocol);
 	 * also known as "scheme-specific part"
-	 * @param fragment the fragment within that location (for example, anchor on an HTML page,
+	 * @param fragment the fragment within that location (e.g. anchor on an HTML page,
 	 * as following after a "#" separator)
 	 * @throws MalformedURLException if the given URL specification is not valid
 	 * @see java.net.URI#URI(String, String, String)
 	 */
-	public UrlResource(String protocol, String location, @Nullable String fragment) throws MalformedURLException {
+	public UrlResource(String protocol, String location, @Nullable String fragment) throws MalformedURLException  {
 		try {
 			this.uri = new URI(protocol, location, fragment);
 			this.url = this.uri.toURL();
@@ -160,58 +137,35 @@ public class UrlResource extends AbstractFileResolvingResource {
 
 
 	/**
-	 * Create a new {@code UrlResource} from the given {@link URI}.
-	 * <p>This factory method is a convenience for {@link #UrlResource(URI)} that
-	 * catches any {@link MalformedURLException} and rethrows it wrapped in an
-	 * {@link UncheckedIOException}; suitable for use in {@link java.util.stream.Stream}
-	 * and {@link java.util.Optional} APIs or other scenarios when a checked
-	 * {@link IOException} is undesirable.
-	 * @param uri a URI
-	 * @throws UncheckedIOException if the given URL path is not valid
-	 * @since 6.0
-	 * @see #UrlResource(URI)
+	 * Determine a cleaned URL for the given original URL.
+	 * @param originalUrl the original URL
+	 * @param originalPath the original URL path
+	 * @return the cleaned URL (possibly the original URL as-is)
+	 * @see org.springframework.util.StringUtils#cleanPath
 	 */
-	public static UrlResource from(URI uri) throws UncheckedIOException {
-		try {
-			return new UrlResource(uri);
+	private static URL getCleanedUrl(URL originalUrl, String originalPath) {
+		String cleanedPath = StringUtils.cleanPath(originalPath);
+		if (!cleanedPath.equals(originalPath)) {
+			try {
+				return new URL(cleanedPath);
+			}
+			catch (MalformedURLException ex) {
+				// Cleaned URL path cannot be converted to URL -> take original URL.
+			}
 		}
-		catch (MalformedURLException ex) {
-			throw new UncheckedIOException(ex);
-		}
+		return originalUrl;
 	}
-
-	/**
-	 * Create a new {@code UrlResource} from the given URL path.
-	 * <p>This factory method is a convenience for {@link #UrlResource(String)}
-	 * that catches any {@link MalformedURLException} and rethrows it wrapped in an
-	 * {@link UncheckedIOException}; suitable for use in {@link java.util.stream.Stream}
-	 * and {@link java.util.Optional} APIs or other scenarios when a checked
-	 * {@link IOException} is undesirable.
-	 * @param path a URL path
-	 * @throws UncheckedIOException if the given URL path is not valid
-	 * @since 6.0
-	 * @see #UrlResource(String)
-	 */
-	public static UrlResource from(String path) throws UncheckedIOException {
-		try {
-			return new UrlResource(path);
-		}
-		catch (MalformedURLException ex) {
-			throw new UncheckedIOException(ex);
-		}
-	}
-
 
 	/**
 	 * Lazily determine a cleaned URL for the given original URL.
+	 * @see #getCleanedUrl(URL, String)
 	 */
-	private String getCleanedUrl() {
-		String cleanedUrl = this.cleanedUrl;
+	private URL getCleanedUrl() {
+		URL cleanedUrl = this.cleanedUrl;
 		if (cleanedUrl != null) {
 			return cleanedUrl;
 		}
-		String originalPath = (this.uri != null ? this.uri : this.url).toString();
-		cleanedUrl = StringUtils.cleanPath(originalPath);
+		cleanedUrl = getCleanedUrl(this.url, (this.uri != null ? this.uri : this.url).toString());
 		this.cleanedUrl = cleanedUrl;
 		return cleanedUrl;
 	}
@@ -234,20 +188,10 @@ public class UrlResource extends AbstractFileResolvingResource {
 		}
 		catch (IOException ex) {
 			// Close the HTTP connection (if applicable).
-			if (con instanceof HttpURLConnection httpConn) {
-				httpConn.disconnect();
+			if (con instanceof HttpURLConnection) {
+				((HttpURLConnection) con).disconnect();
 			}
 			throw ex;
-		}
-	}
-
-	@Override
-	protected void customizeConnection(URLConnection con) throws IOException {
-		super.customizeConnection(con);
-		String userInfo = this.url.getUserInfo();
-		if (userInfo != null) {
-			String encodedCredentials = Base64.getUrlEncoder().encodeToString(userInfo.getBytes());
-			con.setRequestProperty(AUTHORIZATION, "Basic " + encodedCredentials);
 		}
 	}
 
@@ -311,38 +255,28 @@ public class UrlResource extends AbstractFileResolvingResource {
 	/**
 	 * This delegate creates a {@code java.net.URL}, applying the given path
 	 * relative to the path of the underlying URL of this resource descriptor.
-	 * <p>A leading slash will get dropped; a "#" symbol will get encoded.
-	 * Note that this method effectively cleans the combined path as of 6.1.
+	 * A leading slash will get dropped; a "#" symbol will get encoded.
 	 * @since 5.2
 	 * @see #createRelative(String)
-	 * @see ResourceUtils#toRelativeURL(URL, String)
+	 * @see java.net.URL#URL(java.net.URL, String)
 	 */
 	protected URL createRelativeURL(String relativePath) throws MalformedURLException {
 		if (relativePath.startsWith("/")) {
 			relativePath = relativePath.substring(1);
 		}
-		return ResourceUtils.toRelativeURL(this.url, relativePath);
+		// # can appear in filenames, java.net.URL should not treat it as a fragment
+		relativePath = StringUtils.replace(relativePath, "#", "%23");
+		// Use the URL constructor for applying the relative path as a URL spec
+		return new URL(this.url, relativePath);
 	}
 
 	/**
-	 * This implementation returns the URL-decoded name of the file that this URL
-	 * refers to.
+	 * This implementation returns the name of the file that this URL refers to.
 	 * @see java.net.URL#getPath()
-	 * @see java.net.URLDecoder#decode(String, java.nio.charset.Charset)
 	 */
 	@Override
-	@Nullable
 	public String getFilename() {
-		if (this.uri != null) {
-			String path = this.uri.getPath();
-			if (path != null) {
-				// Prefer URI path: decoded and has standard separators
-				return StringUtils.getFilename(this.uri.getPath());
-			}
-		}
-		// Otherwise, process URL path
-		String filename = StringUtils.getFilename(StringUtils.cleanPath(this.url.getPath()));
-		return (filename != null ? URLDecoder.decode(filename, StandardCharsets.UTF_8) : null);
+		return StringUtils.getFilename(getCleanedUrl().getPath());
 	}
 
 	/**
@@ -350,7 +284,7 @@ public class UrlResource extends AbstractFileResolvingResource {
 	 */
 	@Override
 	public String getDescription() {
-		return "URL [" + (this.uri != null ? this.uri : this.url) + "]";
+		return "URL [" + this.url + "]";
 	}
 
 
@@ -359,8 +293,8 @@ public class UrlResource extends AbstractFileResolvingResource {
 	 */
 	@Override
 	public boolean equals(@Nullable Object other) {
-		return (this == other || (other instanceof UrlResource that &&
-				getCleanedUrl().equals(that.getCleanedUrl())));
+		return (this == other || (other instanceof UrlResource &&
+				getCleanedUrl().equals(((UrlResource) other).getCleanedUrl())));
 	}
 
 	/**
