@@ -16,26 +16,18 @@
 
 package org.springframework.util;
 
+import java.beans.Introspector;
 import java.io.Closeable;
 import java.io.Externalizable;
-import java.io.File;
 import java.io.Serializable;
+import java.lang.reflect.Array;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Proxy;
-import java.net.InetAddress;
-import java.net.URI;
-import java.net.URL;
-import java.nio.charset.Charset;
-import java.nio.file.Path;
-import java.time.ZoneId;
-import java.time.temporal.Temporal;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Currency;
-import java.util.Date;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -43,14 +35,10 @@ import java.util.IdentityHashMap;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.StringJoiner;
-import java.util.TimeZone;
-import java.util.UUID;
-import java.util.regex.Pattern;
 
 import org.springframework.lang.Nullable;
 
@@ -64,7 +52,6 @@ import org.springframework.lang.Nullable;
  * @author Rob Harrop
  * @author Sam Brannen
  * @author Sebastien Deleuze
- * @author Sungbin Yang
  * @since 1.1
  * @see TypeUtils
  * @see ReflectionUtils
@@ -107,19 +94,19 @@ public abstract class ClassUtils {
 
 	/**
 	 * Map with primitive wrapper type as key and corresponding primitive
-	 * type as value, for example: {@code Integer.class -> int.class}.
+	 * type as value, for example: Integer.class -> int.class.
 	 */
 	private static final Map<Class<?>, Class<?>> primitiveWrapperTypeMap = new IdentityHashMap<>(9);
 
 	/**
 	 * Map with primitive type as key and corresponding wrapper
-	 * type as value, for example: {@code int.class -> Integer.class}.
+	 * type as value, for example: int.class -> Integer.class.
 	 */
 	private static final Map<Class<?>, Class<?>> primitiveTypeToWrapperMap = new IdentityHashMap<>(9);
 
 	/**
 	 * Map with primitive type name as key and corresponding primitive
-	 * type as value, for example: {@code "int" -> int.class}.
+	 * type as value, for example: "int" -> "int.class".
 	 */
 	private static final Map<String, Class<?>> primitiveTypeNameMap = new HashMap<>(32);
 
@@ -136,25 +123,9 @@ public abstract class ClassUtils {
 	private static final Set<Class<?>> javaLanguageInterfaces;
 
 	/**
-	 * Cache for equivalent methods on a interface implemented by the declaring class.
-	 * <p>A {@code null} value signals that no interface method was found for the key.
+	 * Cache for equivalent methods on an interface implemented by the declaring class.
 	 */
 	private static final Map<Method, Method> interfaceMethodCache = new ConcurrentReferenceHashMap<>(256);
-
-	/**
-	 * Cache for equivalent methods on a public interface implemented by the declaring class.
-	 * <p>A {@code null} value signals that no public interface method was found for the key.
-	 * @since 6.2
-	 */
-	private static final Map<Method, Method> publicInterfaceMethodCache = new ConcurrentReferenceHashMap<>(256);
-
-	/**
-	 * Cache for equivalent public methods in a public declaring type within the type hierarchy
-	 * of the method's declaring class.
-	 * <p>A {@code null} value signals that no publicly accessible method was found for the key.
-	 * @since 6.2
-	 */
-	private static final Map<Method, Method> publiclyAccessibleMethodCache = new ConcurrentReferenceHashMap<>(256);
 
 
 	static {
@@ -194,7 +165,7 @@ public abstract class ClassUtils {
 		Class<?>[] javaLanguageInterfaceArray = {Serializable.class, Externalizable.class,
 				Closeable.class, AutoCloseable.class, Cloneable.class, Comparable.class};
 		registerCommonClasses(javaLanguageInterfaceArray);
-		javaLanguageInterfaces = Set.of(javaLanguageInterfaceArray);
+		javaLanguageInterfaces = new HashSet<>(Arrays.asList(javaLanguageInterfaceArray));
 	}
 
 
@@ -268,9 +239,9 @@ public abstract class ClassUtils {
 
 	/**
 	 * Replacement for {@code Class.forName()} that also returns Class instances
-	 * for primitives (for example, "int") and array class names (for example, "String[]").
+	 * for primitives (e.g. "int") and array class names (e.g. "String[]").
 	 * Furthermore, it is also capable of resolving nested class names in Java source
-	 * style (for example, "java.lang.Thread.State" instead of "java.lang.Thread$State").
+	 * style (e.g. "java.lang.Thread.State" instead of "java.lang.Thread$State").
 	 * @param name the name of the Class
 	 * @param classLoader the class loader to use
 	 * (can be {@code null}, which indicates the default class loader)
@@ -296,21 +267,21 @@ public abstract class ClassUtils {
 		if (name.endsWith(ARRAY_SUFFIX)) {
 			String elementClassName = name.substring(0, name.length() - ARRAY_SUFFIX.length());
 			Class<?> elementClass = forName(elementClassName, classLoader);
-			return elementClass.arrayType();
+			return Array.newInstance(elementClass, 0).getClass();
 		}
 
 		// "[Ljava.lang.String;" style arrays
 		if (name.startsWith(NON_PRIMITIVE_ARRAY_PREFIX) && name.endsWith(";")) {
 			String elementName = name.substring(NON_PRIMITIVE_ARRAY_PREFIX.length(), name.length() - 1);
 			Class<?> elementClass = forName(elementName, classLoader);
-			return elementClass.arrayType();
+			return Array.newInstance(elementClass, 0).getClass();
 		}
 
 		// "[[I" or "[[Ljava.lang.String;" style arrays
 		if (name.startsWith(INTERNAL_ARRAY_PREFIX)) {
 			String elementName = name.substring(INTERNAL_ARRAY_PREFIX.length());
 			Class<?> elementClass = forName(elementName, classLoader);
-			return elementClass.arrayType();
+			return Array.newInstance(elementClass, 0).getClass();
 		}
 
 		ClassLoader clToUse = classLoader;
@@ -322,8 +293,7 @@ public abstract class ClassUtils {
 		}
 		catch (ClassNotFoundException ex) {
 			int lastDotIndex = name.lastIndexOf(PACKAGE_SEPARATOR);
-			int previousDotIndex = name.lastIndexOf(PACKAGE_SEPARATOR, lastDotIndex - 1);
-			if (lastDotIndex != -1 && previousDotIndex != -1 && Character.isUpperCase(name.charAt(previousDotIndex + 1))) {
+			if (lastDotIndex != -1) {
 				String nestedClassName =
 						name.substring(0, lastDotIndex) + NESTED_CLASS_SEPARATOR + name.substring(lastDotIndex + 1);
 				try {
@@ -349,10 +319,10 @@ public abstract class ClassUtils {
 	 * @return a class instance for the supplied name
 	 * @throws IllegalArgumentException if the class name was not resolvable
 	 * (that is, the class could not be found or the class file could not be loaded)
-	 * @throws IllegalStateException if the corresponding class is resolvable but there
-	 * was a readability mismatch in the inheritance hierarchy of the class (typically a
-	 * missing dependency declaration in a Java Module System module definition for a
-	 * superclass or interface implemented by the class to be loaded here)
+	 * @throws IllegalStateException if the corresponding class is resolvable but
+	 * there was a readability mismatch in the inheritance hierarchy of the class
+	 * (typically a missing dependency declaration in a Jigsaw module definition
+	 * for a superclass or interface implemented by the class to be loaded here)
 	 * @see #forName(String, ClassLoader)
 	 */
 	public static Class<?> resolveClassName(String className, @Nullable ClassLoader classLoader)
@@ -382,10 +352,10 @@ public abstract class ClassUtils {
 	 * (can be {@code null} which indicates the default class loader)
 	 * @return whether the specified class is present (including all of its
 	 * superclasses and interfaces)
-	 * @throws IllegalStateException if the corresponding class is resolvable but there
-	 * was a readability mismatch in the inheritance hierarchy of the class (typically a
-	 * missing dependency declaration in a Java Module System module definition for a
-	 * superclass or interface implemented by the class to be checked here)
+	 * @throws IllegalStateException if the corresponding class is resolvable but
+	 * there was a readability mismatch in the inheritance hierarchy of the class
+	 * (typically a missing dependency declaration in a Jigsaw module definition
+	 * for a superclass or interface implemented by the class to be checked here)
 	 */
 	public static boolean isPresent(String className, @Nullable ClassLoader classLoader) {
 		try {
@@ -541,7 +511,7 @@ public abstract class ClassUtils {
 	 */
 	public static boolean isPrimitiveArray(Class<?> clazz) {
 		Assert.notNull(clazz, "Class must not be null");
-		return (clazz.isArray() && clazz.componentType().isPrimitive());
+		return (clazz.isArray() && clazz.getComponentType().isPrimitive());
 	}
 
 	/**
@@ -552,7 +522,7 @@ public abstract class ClassUtils {
 	 */
 	public static boolean isPrimitiveWrapperArray(Class<?> clazz) {
 		Assert.notNull(clazz, "Class must not be null");
-		return (clazz.isArray() && isPrimitiveWrapper(clazz.componentType()));
+		return (clazz.isArray() && isPrimitiveWrapper(clazz.getComponentType()));
 	}
 
 	/**
@@ -561,60 +531,9 @@ public abstract class ClassUtils {
 	 * @param clazz the class to check
 	 * @return the original class, or a primitive wrapper for the original primitive type
 	 */
-	@SuppressWarnings("NullAway")
 	public static Class<?> resolvePrimitiveIfNecessary(Class<?> clazz) {
 		Assert.notNull(clazz, "Class must not be null");
 		return (clazz.isPrimitive() && clazz != void.class ? primitiveTypeToWrapperMap.get(clazz) : clazz);
-	}
-
-	/**
-	 * Determine if the given type represents either {@code Void} or {@code void}.
-	 * @param type the type to check
-	 * @return {@code true} if the type represents {@code Void} or {@code void}
-	 * @since 6.1.4
-	 * @see Void
-	 * @see Void#TYPE
-	 */
-	public static boolean isVoidType(@Nullable Class<?> type) {
-		return (type == void.class || type == Void.class);
-	}
-
-	/**
-	 * Delegate for {@link org.springframework.beans.BeanUtils#isSimpleValueType}.
-	 * Also used by {@link ObjectUtils#nullSafeConciseToString}.
-	 * <p>Check if the given type represents a common "simple" value type:
-	 * primitive or primitive wrapper, {@link Enum}, {@link String} or other
-	 * {@link CharSequence}, {@link Number}, {@link Date}, {@link Temporal},
-	 * {@link ZoneId}, {@link TimeZone}, {@link File}, {@link Path}, {@link URI},
-	 * {@link URL}, {@link InetAddress}, {@link Charset}, {@link Currency},
-	 * {@link Locale}, {@link UUID}, {@link Pattern}, or {@link Class}.
-	 * <p>{@code Void} and {@code void} are not considered simple value types.
-	 * @param type the type to check
-	 * @return whether the given type represents a "simple" value type,
-	 * suggesting value-based data binding and {@code toString} output
-	 * @since 6.1
-	 */
-	public static boolean isSimpleValueType(Class<?> type) {
-		return (!isVoidType(type) &&
-				(isPrimitiveOrWrapper(type) ||
-				Enum.class.isAssignableFrom(type) ||
-				CharSequence.class.isAssignableFrom(type) ||
-				Number.class.isAssignableFrom(type) ||
-				Date.class.isAssignableFrom(type) ||
-				Temporal.class.isAssignableFrom(type) ||
-				ZoneId.class.isAssignableFrom(type) ||
-				TimeZone.class.isAssignableFrom(type) ||
-				File.class.isAssignableFrom(type) ||
-				Path.class.isAssignableFrom(type) ||
-				Charset.class.isAssignableFrom(type) ||
-				Currency.class.isAssignableFrom(type) ||
-				InetAddress.class.isAssignableFrom(type) ||
-				URI.class == type ||
-				URL.class == type ||
-				UUID.class == type ||
-				Locale.class == type ||
-				Pattern.class == type ||
-				Class.class == type));
 	}
 
 	/**
@@ -695,7 +614,7 @@ public abstract class ClassUtils {
 	public static String addResourcePathToPackagePath(Class<?> clazz, String resourceName) {
 		Assert.notNull(resourceName, "Resource name must not be null");
 		if (!resourceName.startsWith("/")) {
-			return classPackageAsResourcePath(clazz) + PATH_SEPARATOR + resourceName;
+			return classPackageAsResourcePath(clazz) + '/' + resourceName;
 		}
 		return classPackageAsResourcePath(clazz) + resourceName;
 	}
@@ -868,7 +787,7 @@ public abstract class ClassUtils {
 	 * conflicting method signatures (or a similar constraint is violated)
 	 * @see java.lang.reflect.Proxy#getProxyClass
 	 */
-	@SuppressWarnings("deprecation")
+	@SuppressWarnings("deprecation")  // on JDK 9
 	public static Class<?> createCompositeInterface(Class<?>[] interfaces, @Nullable ClassLoader classLoader) {
 		Assert.notEmpty(interfaces, "Interface array must not be empty");
 		return Proxy.getProxyClass(classLoader, interfaces);
@@ -922,26 +841,14 @@ public abstract class ClassUtils {
 	}
 
 	/**
-	 * Determine if the supplied class is a static class.
-	 * @return {@code true} if the supplied class is a static class
-	 * @since 6.0
-	 * @see Modifier#isStatic(int)
-	 * @see #isInnerClass(Class)
-	 */
-	public static boolean isStaticClass(Class<?> clazz) {
-		return Modifier.isStatic(clazz.getModifiers());
-	}
-
-	/**
 	 * Determine if the supplied class is an <em>inner class</em>,
 	 * i.e. a non-static member of an enclosing class.
 	 * @return {@code true} if the supplied class is an inner class
 	 * @since 5.0.5
 	 * @see Class#isMemberClass()
-	 * @see #isStaticClass(Class)
 	 */
 	public static boolean isInnerClass(Class<?> clazz) {
-		return (clazz.isMemberClass() && !isStaticClass(clazz));
+		return (clazz.isMemberClass() && !Modifier.isStatic(clazz.getModifiers()));
 	}
 
 	/**
@@ -1037,10 +944,10 @@ public abstract class ClassUtils {
 		}
 		Class<?> clazz = value.getClass();
 		if (Proxy.isProxyClass(clazz)) {
-			String prefix = clazz.getTypeName() + " implementing ";
+			String prefix = clazz.getName() + " implementing ";
 			StringJoiner result = new StringJoiner(",", prefix, "");
 			for (Class<?> ifc : clazz.getInterfaces()) {
-				result.add(ifc.getTypeName());
+				result.add(ifc.getName());
 			}
 			return result.toString();
 		}
@@ -1091,18 +998,18 @@ public abstract class ClassUtils {
 	 * property format. Strips the outer class name in case of a nested class.
 	 * @param clazz the class
 	 * @return the short name rendered in a standard JavaBeans property format
-	 * @see StringUtils#uncapitalizeAsProperty(String)
+	 * @see java.beans.Introspector#decapitalize(String)
 	 */
 	public static String getShortNameAsProperty(Class<?> clazz) {
 		String shortName = getShortName(clazz);
 		int dotIndex = shortName.lastIndexOf(PACKAGE_SEPARATOR);
 		shortName = (dotIndex != -1 ? shortName.substring(dotIndex + 1) : shortName);
-		return StringUtils.uncapitalizeAsProperty(shortName);
+		return Introspector.decapitalize(shortName);
 	}
 
 	/**
 	 * Determine the name of the class file, relative to the containing
-	 * package: for example, "String.class".
+	 * package: e.g. "String.class"
 	 * @param clazz the class
 	 * @return the file name of the ".class" file
 	 */
@@ -1115,7 +1022,7 @@ public abstract class ClassUtils {
 
 	/**
 	 * Determine the name of the package of the given class,
-	 * for example, "java.lang" for the {@code java.lang.String} class.
+	 * e.g. "java.lang" for the {@code java.lang.String} class.
 	 * @param clazz the class
 	 * @return the package name, or the empty String if the class
 	 * is defined in the default package
@@ -1127,7 +1034,7 @@ public abstract class ClassUtils {
 
 	/**
 	 * Determine the name of the package of the given fully-qualified class name,
-	 * for example, "java.lang" for the {@code java.lang.String} class name.
+	 * e.g. "java.lang" for the {@code java.lang.String} class name.
 	 * @param fqClassName the fully-qualified class name
 	 * @return the package name, or the empty String if the class
 	 * is defined in the default package
@@ -1405,13 +1312,11 @@ public abstract class ClassUtils {
 
 	/**
 	 * Determine a corresponding interface method for the given method handle, if possible.
-	 * <p>This is particularly useful for arriving at a public exported type on the Java
-	 * Module System which allows the method to be invoked via reflection without an illegal
-	 * access warning.
+	 * <p>This is particularly useful for arriving at a public exported type on Jigsaw
+	 * which can be reflectively invoked without an illegal access warning.
 	 * @param method the method to be invoked, potentially from an implementation class
 	 * @return the corresponding interface method, or the original method if none found
 	 * @since 5.1
-	 * @see #getPubliclyAccessibleMethodIfPossible(Method, Class)
 	 * @deprecated in favor of {@link #getInterfaceMethodIfPossible(Method, Class)}
 	 */
 	@Deprecated
@@ -1421,56 +1326,37 @@ public abstract class ClassUtils {
 
 	/**
 	 * Determine a corresponding interface method for the given method handle, if possible.
-	 * <p>This is particularly useful for arriving at a public exported type on the Java
-	 * Module System which allows the method to be invoked via reflection without an illegal
-	 * access warning.
+	 * <p>This is particularly useful for arriving at a public exported type on Jigsaw
+	 * which can be reflectively invoked without an illegal access warning.
 	 * @param method the method to be invoked, potentially from an implementation class
-	 * @param targetClass the target class to invoke the method on, or {@code null} if unknown
+	 * @param targetClass the target class to check for declared interfaces
 	 * @return the corresponding interface method, or the original method if none found
 	 * @since 5.3.16
-	 * @see #getPubliclyAccessibleMethodIfPossible(Method, Class)
 	 * @see #getMostSpecificMethod
 	 */
 	public static Method getInterfaceMethodIfPossible(Method method, @Nullable Class<?> targetClass) {
-		return getInterfaceMethodIfPossible(method, targetClass, false);
-	}
-
-	private static Method getInterfaceMethodIfPossible(Method method, @Nullable Class<?> targetClass,
-			boolean requirePublicInterface) {
-
-		Class<?> declaringClass = method.getDeclaringClass();
-		if (!Modifier.isPublic(method.getModifiers()) || (declaringClass.isInterface() &&
-				(!requirePublicInterface || Modifier.isPublic(declaringClass.getModifiers())))) {
+		if (!Modifier.isPublic(method.getModifiers()) || method.getDeclaringClass().isInterface()) {
 			return method;
 		}
-		String methodName = method.getName();
-		Class<?>[] parameterTypes = method.getParameterTypes();
-
-		Map<Method, Method> methodCache = (requirePublicInterface ? publicInterfaceMethodCache : interfaceMethodCache);
 		// Try cached version of method in its declaring class
-		Method result = methodCache.computeIfAbsent(method, key -> findInterfaceMethodIfPossible(
-				methodName, parameterTypes, declaringClass, Object.class, requirePublicInterface));
-		if (result == null && targetClass != null) {
+		Method result = interfaceMethodCache.computeIfAbsent(method,
+				key -> findInterfaceMethodIfPossible(key, key.getDeclaringClass(), Object.class));
+		if (result == method && targetClass != null) {
 			// No interface method found yet -> try given target class (possibly a subclass of the
 			// declaring class, late-binding a base class method to a subclass-declared interface:
-			// see, for example, HashMap.HashIterator.hasNext)
-			result = findInterfaceMethodIfPossible(
-					methodName, parameterTypes, targetClass, declaringClass, requirePublicInterface);
+			// see e.g. HashMap.HashIterator.hasNext)
+			result = findInterfaceMethodIfPossible(method, targetClass, method.getDeclaringClass());
 		}
-		return (result != null ? result : method);
+		return result;
 	}
 
-	@Nullable
-	private static Method findInterfaceMethodIfPossible(String methodName, Class<?>[] parameterTypes,
-			Class<?> startClass, Class<?> endClass, boolean requirePublicInterface) {
-
+	private static Method findInterfaceMethodIfPossible(Method method, Class<?> startClass, Class<?> endClass) {
 		Class<?> current = startClass;
 		while (current != null && current != endClass) {
-			for (Class<?> ifc : current.getInterfaces()) {
+			Class<?>[] ifcs = current.getInterfaces();
+			for (Class<?> ifc : ifcs) {
 				try {
-					if (!requirePublicInterface || Modifier.isPublic(ifc.getModifiers())) {
-						return ifc.getMethod(methodName, parameterTypes);
-					}
+					return ifc.getMethod(method.getName(), method.getParameterTypes());
 				}
 				catch (NoSuchMethodException ex) {
 					// ignore
@@ -1478,71 +1364,7 @@ public abstract class ClassUtils {
 			}
 			current = current.getSuperclass();
 		}
-		return null;
-	}
-
-	/**
-	 * Get the first publicly accessible method in the supplied method's type hierarchy that
-	 * has a method signature equivalent to the supplied method, if possible.
-	 * <p>If the supplied method is {@code public} and declared in a {@code public} type,
-	 * the supplied method will be returned.
-	 * <p>Otherwise, this method recursively searches the class hierarchy and implemented
-	 * interfaces for an equivalent method that is {@code public} and declared in a
-	 * {@code public} type.
-	 * <p>If a publicly accessible equivalent method cannot be found, the supplied method
-	 * will be returned, indicating that no such equivalent method exists. Consequently,
-	 * callers of this method must manually validate the accessibility of the returned method
-	 * if public access is a requirement.
-	 * <p>This is particularly useful for arriving at a public exported type on the Java
-	 * Module System which allows the method to be invoked via reflection without an illegal
-	 * access warning. This is also useful for invoking methods via a public API in bytecode
-	 * &mdash; for example, for use with the Spring Expression Language (SpEL) compiler.
-	 * For example, if a non-public class overrides {@code toString()}, this method will
-	 * traverse up the type hierarchy to find the first public type that declares the method
-	 * (if there is one). For {@code toString()}, it may traverse as far as {@link Object}.
-	 * @param method the method to be invoked, potentially from an implementation class
-	 * @param targetClass the target class to invoke the method on, or {@code null} if unknown
-	 * @return the corresponding publicly accessible method, or the original method if none found
-	 * @since 6.2
-	 * @see #getInterfaceMethodIfPossible(Method, Class)
-	 * @see #getMostSpecificMethod(Method, Class)
-	 */
-	public static Method getPubliclyAccessibleMethodIfPossible(Method method, @Nullable Class<?> targetClass) {
-		Class<?> declaringClass = method.getDeclaringClass();
-		// If the method is not public, we can abort the search immediately; or if the method's
-		// declaring class is public, the method is already publicly accessible.
-		if (!Modifier.isPublic(method.getModifiers()) || Modifier.isPublic(declaringClass.getModifiers())) {
-			return method;
-		}
-
-		Method interfaceMethod = getInterfaceMethodIfPossible(method, targetClass, true);
-		// If we found a method in a public interface, return the interface method.
-		if (!interfaceMethod.equals(method)) {
-			return interfaceMethod;
-		}
-
-		Method result = publiclyAccessibleMethodCache.computeIfAbsent(method,
-				key -> findPubliclyAccessibleMethodIfPossible(key.getName(), key.getParameterTypes(), declaringClass));
-		return (result != null ? result : method);
-	}
-
-	@Nullable
-	private static Method findPubliclyAccessibleMethodIfPossible(
-			String methodName, Class<?>[] parameterTypes, Class<?> declaringClass) {
-
-		Class<?> current = declaringClass.getSuperclass();
-		while (current != null) {
-			if (Modifier.isPublic(current.getModifiers())) {
-				try {
-					return current.getDeclaredMethod(methodName, parameterTypes);
-				}
-				catch (NoSuchMethodException ex) {
-					// ignore
-				}
-			}
-			current = current.getSuperclass();
-		}
-		return null;
+		return method;
 	}
 
 	/**
