@@ -25,6 +25,7 @@ import java.nio.charset.StandardCharsets;
 import java.time.ZoneId;
 import java.util.AbstractList;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Currency;
@@ -40,7 +41,6 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.TimeZone;
 import java.util.UUID;
-import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
@@ -50,15 +50,13 @@ import org.springframework.core.convert.ConversionFailedException;
 import org.springframework.core.convert.ConverterNotFoundException;
 import org.springframework.core.convert.TypeDescriptor;
 import org.springframework.core.convert.support.DefaultConversionService;
-import org.springframework.lang.Nullable;
 import org.springframework.util.ClassUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
-import static org.assertj.core.api.Assertions.entry;
 
 /**
- * Tests for {@link DefaultConversionService}.
+ * Unit tests for {@link DefaultConversionService}.
  *
  * <p>In this package for enforcing accessibility checks to non-public classes outside
  * the {@code org.springframework.core.convert.support} implementation package.
@@ -156,7 +154,7 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void stringToInteger() {
-		assertThat(conversionService.convert("1", Integer.class)).isEqualTo(1);
+		assertThat(conversionService.convert("1", Integer.class)).isEqualTo((int) Integer.valueOf(1));
 	}
 
 	@Test
@@ -261,7 +259,7 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void enumToInteger() {
-		assertThat(conversionService.convert(Foo.BAR, Integer.class)).isEqualTo(0);
+		assertThat(conversionService.convert(Foo.BAR, Integer.class)).isEqualTo((int) Integer.valueOf(0));
 	}
 
 	@Test
@@ -320,32 +318,14 @@ class DefaultConversionServiceTests {
 	}
 
 	@Test
-	void stringToPatternEmptyString() {
-		assertThat(conversionService.convert("", Pattern.class)).isNull();
-	}
-
-	@Test
-	void stringToPattern() {
-		String pattern = "\\s";
-		assertThat(conversionService.convert(pattern, Pattern.class))
-				.isInstanceOfSatisfying(Pattern.class, regex -> assertThat(regex.pattern()).isEqualTo(pattern));
-	}
-
-	@Test
-	void patternToString() {
-		String regex = "\\d";
-		assertThat(conversionService.convert(Pattern.compile(regex), String.class)).isEqualTo(regex);
-	}
-
-	@Test
 	void numberToNumber() {
 		assertThat(conversionService.convert(1, Long.class)).isEqualTo(Long.valueOf(1));
 	}
 
 	@Test
 	void numberToNumberNotSupportedNumber() {
-		assertThatExceptionOfType(ConversionFailedException.class)
-				.isThrownBy(() -> conversionService.convert(1, CustomNumber.class));
+		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
+				conversionService.convert(1, CustomNumber.class));
 	}
 
 	@Test
@@ -364,8 +344,7 @@ class DefaultConversionServiceTests {
 	void convertArrayToCollectionInterface() {
 		@SuppressWarnings("unchecked")
 		Collection<String> result = conversionService.convert(new String[] {"1", "2", "3"}, Collection.class);
-		assertThat(result).isEqualTo(List.of("1", "2", "3"));
-		assertThat(result).isExactlyInstanceOf(ArrayList.class).containsExactly("1", "2", "3");
+		assertThat(result).isExactlyInstanceOf(LinkedHashSet.class).containsExactly("1", "2", "3");
 	}
 
 	@Test
@@ -395,18 +374,22 @@ class DefaultConversionServiceTests {
 		String[] source = {"1", "3", "4"};
 		@SuppressWarnings("unchecked")
 		Stream<Integer> result = (Stream<Integer>) this.conversionService.convert(source,
-				TypeDescriptor.valueOf(String[].class), new TypeDescriptor(getClass().getDeclaredField("genericStream")));
-		assertThat(result).containsExactly(1, 3, 4);
+				TypeDescriptor.valueOf(String[].class),
+				new TypeDescriptor(getClass().getDeclaredField("genericStream")));
+		assertThat(result.mapToInt(x -> x).sum()).isEqualTo(8);
 	}
 
 	@Test
 	void spr7766() throws Exception {
-		conversionService.addConverter(new ColorConverter());
+		ConverterRegistry registry = (conversionService);
+		registry.addConverter(new ColorConverter());
 		@SuppressWarnings("unchecked")
 		List<Color> colors = (List<Color>) conversionService.convert(new String[] {"ffffff", "#000000"},
 				TypeDescriptor.valueOf(String[].class),
 				new TypeDescriptor(new MethodParameter(getClass().getMethod("handlerMethod", List.class), 0)));
-		assertThat(colors).containsExactly(Color.WHITE, Color.BLACK);
+		assertThat(colors.size()).isEqualTo(2);
+		assertThat(colors.get(0)).isEqualTo(Color.WHITE);
+		assertThat(colors.get(1)).isEqualTo(Color.BLACK);
 	}
 
 	@Test
@@ -418,8 +401,8 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertArrayToAbstractCollection() {
-		assertThatExceptionOfType(ConversionFailedException.class)
-				.isThrownBy(() -> conversionService.convert(new String[]{"1", "2", "3"}, AbstractList.class));
+		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
+				conversionService.convert(new String[]{"1", "2", "3"}, AbstractList.class));
 	}
 
 	@Test
@@ -437,7 +420,7 @@ class DefaultConversionServiceTests {
 	@Test
 	void convertEmptyArrayToString() {
 		String result = conversionService.convert(new String[0], String.class);
-		assertThat(result).isEmpty();
+		assertThat(result).isEqualTo("");
 	}
 
 	@Test
@@ -499,28 +482,28 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertCollectionToArray() {
-		List<String> list = List.of("1", "2", "3");
+		List<String> list = Arrays.asList("1", "2", "3");
 		String[] result = conversionService.convert(list, String[].class);
 		assertThat(result).containsExactly("1", "2", "3");
 	}
 
 	@Test
 	void convertCollectionToArrayWithElementConversion() {
-		List<String> list = List.of("1", "2", "3");
+		List<String> list = Arrays.asList("1", "2", "3");
 		Integer[] result = conversionService.convert(list, Integer[].class);
 		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertCollectionToString() {
-		List<String> list = List.of("foo", "bar");
+		List<String> list = Arrays.asList("foo", "bar");
 		String result = conversionService.convert(list, String.class);
 		assertThat(result).isEqualTo("foo,bar");
 	}
 
 	@Test
 	void convertCollectionToStringWithElementConversion() throws Exception {
-		List<Integer> list = List.of(3, 5);
+		List<Integer> list = Arrays.asList(3, 5);
 		String result = (String) conversionService.convert(list,
 				new TypeDescriptor(getClass().getField("genericList")), TypeDescriptor.valueOf(String.class));
 		assertThat(result).isEqualTo("3,5");
@@ -551,26 +534,29 @@ class DefaultConversionServiceTests {
 	void convertCollectionToObject() {
 		List<Long> list = Collections.singletonList(3L);
 		Long result = conversionService.convert(list, Long.class);
-		assertThat(result).isEqualTo(3L);
+		assertThat(result).isEqualTo(3);
 	}
 
 	@Test
 	void convertCollectionToObjectWithElementConversion() {
 		List<String> list = Collections.singletonList("3");
 		Integer result = conversionService.convert(list, Integer.class);
-		assertThat(result).isEqualTo(3);
+		assertThat((int) result).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	@Test
 	void convertCollectionToObjectAssignableTarget() throws Exception {
-		Collection<String> source = List.of("foo");
+		Collection<String> source = new ArrayList<>();
+		source.add("foo");
 		Object result = conversionService.convert(source, new TypeDescriptor(getClass().getField("assignableTarget")));
-		assertThat(result).isSameAs(source);
+		assertThat(result).isEqualTo(source);
 	}
 
 	@Test
 	void convertCollectionToObjectWithCustomConverter() {
-		List<String> source = List.of("A", "B");
+		List<String> source = new ArrayList<>();
+		source.add("A");
+		source.add("B");
 		conversionService.addConverter(List.class, ListWrapper.class, ListWrapper::new);
 		ListWrapper result = conversionService.convert(source, ListWrapper.class);
 		assertThat(result.getList()).isSameAs(source);
@@ -578,9 +564,9 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertObjectToCollection() {
-		@SuppressWarnings("unchecked")
-		List<Long> result = conversionService.convert(3L, List.class);
-		assertThat(result).containsExactly(3L);
+		List<?> result = conversionService.convert(3L, List.class);
+		assertThat(result.size()).isEqualTo(1);
+		assertThat(result.get(0)).isEqualTo(3L);
 	}
 
 	@Test
@@ -588,55 +574,56 @@ class DefaultConversionServiceTests {
 		@SuppressWarnings("unchecked")
 		List<Integer> result = (List<Integer>) conversionService.convert(3L, TypeDescriptor.valueOf(Long.class),
 				new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(result).containsExactly(3);
+		assertThat(result.size()).isEqualTo(1);
+		assertThat((int) result.get(0)).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	@Test
 	void convertStringArrayToIntegerArray() {
 		Integer[] result = conversionService.convert(new String[] {"1", "2", "3"}, Integer[].class);
-		assertThat(result).containsExactly(1, 2, 3);
+		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
+		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
+		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	@Test
 	void convertStringArrayToIntArray() {
 		int[] result = conversionService.convert(new String[] {"1", "2", "3"}, int[].class);
-		assertThat(result).containsExactly(1, 2, 3);
-	}
-
-	@Test
-	void convertIntArrayToStringArray() {
-		String[] result = conversionService.convert(new int[] {1, 2, 3}, String[].class);
-		assertThat(result).containsExactly("1", "2", "3");
+		assertThat(result[0]).isEqualTo(1);
+		assertThat(result[1]).isEqualTo(2);
+		assertThat(result[2]).isEqualTo(3);
 	}
 
 	@Test
 	void convertIntegerArrayToIntegerArray() {
 		Integer[] result = conversionService.convert(new Integer[] {1, 2, 3}, Integer[].class);
-		assertThat(result).containsExactly(1, 2, 3);
+		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
+		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
+		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	@Test
 	void convertIntegerArrayToIntArray() {
 		int[] result = conversionService.convert(new Integer[] {1, 2, 3}, int[].class);
-		assertThat(result).containsExactly(1, 2, 3);
-	}
-
-	@Test
-	void convertIntArrayToIntegerArray() {
-		Integer[] result = conversionService.convert(new int[] {1, 2}, Integer[].class);
-		assertThat(result).containsExactly(1, 2);
+		assertThat(result[0]).isEqualTo(1);
+		assertThat(result[1]).isEqualTo(2);
+		assertThat(result[2]).isEqualTo(3);
 	}
 
 	@Test
 	void convertObjectArrayToIntegerArray() {
 		Integer[] result = conversionService.convert(new Object[] {1, 2, 3}, Integer[].class);
-		assertThat(result).containsExactly(1, 2, 3);
+		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
+		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
+		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	@Test
 	void convertObjectArrayToIntArray() {
 		int[] result = conversionService.convert(new Object[] {1, 2, 3}, int[].class);
-		assertThat(result).containsExactly(1, 2, 3);
+		assertThat(result[0]).isEqualTo(1);
+		assertThat(result[1]).isEqualTo(2);
+		assertThat(result[2]).isEqualTo(3);
 	}
 
 	@Test  // gh-33212
@@ -664,39 +651,31 @@ class DefaultConversionServiceTests {
 		assertThat(converted).isEqualTo(new Byte[]{1, 2, 3});
 	}
 
-	@Test  // gh-14200, SPR-9566
-	void convertPrimitiveByteArrayToPrimitiveByteArray() {
-		byte[] byteArray = new byte[] {1, 2, 3};
-		byte[] result = conversionService.convert(byteArray, byte[].class);
-		assertThat(result).isSameAs(byteArray);
-		assertThat(result).containsExactly(1, 2, 3);
-	}
-
-	@Test  // gh-14200, SPR-9566
-	void convertIntArrayToIntArray() {
-		int[] intArray = new int[] {1, 2, 3};
-		int[] result = conversionService.convert(intArray, int[].class);
-		assertThat(result).isSameAs(intArray);
-		assertThat(result).containsExactly(1, 2, 3);
+	@Test
+	void convertArrayToArrayAssignable() {
+		int[] result = conversionService.convert(new int[] {1, 2, 3}, int[].class);
+		assertThat(result[0]).isEqualTo(1);
+		assertThat(result[1]).isEqualTo(2);
+		assertThat(result[2]).isEqualTo(3);
 	}
 
 	@Test
 	void convertListOfNonStringifiable() {
-		List<Object> list = List.of(new TestEntity(1L), new TestEntity(2L));
+		List<Object> list = Arrays.asList(new TestEntity(1L), new TestEntity(2L));
 		assertThat(conversionService.canConvert(list.getClass(), String.class)).isTrue();
 		try {
 			conversionService.convert(list, String.class);
 		}
 		catch (ConversionFailedException ex) {
-			assertThat(ex.getMessage()).contains(list.getClass().getName());
-			assertThat(ex.getCause()).isInstanceOf(ConverterNotFoundException.class);
-			assertThat(ex.getCause().getMessage()).contains(TestEntity.class.getName());
+			assertThat(ex.getMessage().contains(list.getClass().getName())).isTrue();
+			assertThat(ex.getCause() instanceof ConverterNotFoundException).isTrue();
+			assertThat(ex.getCause().getMessage().contains(TestEntity.class.getName())).isTrue();
 		}
 	}
 
 	@Test
 	void convertListOfStringToString() {
-		List<String> list = List.of("Foo", "Bar");
+		List<String> list = Arrays.asList("Foo", "Bar");
 		assertThat(conversionService.canConvert(list.getClass(), String.class)).isTrue();
 		String result = conversionService.convert(list, String.class);
 		assertThat(result).isEqualTo("Foo,Bar");
@@ -704,9 +683,9 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertListOfListToString() {
-		List<String> list1 = List.of("Foo", "Bar");
-		List<String> list2 = List.of("Baz", "Boop");
-		List<List<String>> list = List.of(list1, list2);
+		List<String> list1 = Arrays.asList("Foo", "Bar");
+		List<String> list2 = Arrays.asList("Baz", "Boop");
+		List<List<String>> list = Arrays.asList(list1, list2);
 		assertThat(conversionService.canConvert(list.getClass(), String.class)).isTrue();
 		String result = conversionService.convert(list, String.class);
 		assertThat(result).isEqualTo("Foo,Bar,Baz,Boop");
@@ -719,9 +698,11 @@ class DefaultConversionServiceTests {
 		foo.add("2");
 		foo.add("3");
 		@SuppressWarnings("unchecked")
-		List<Integer> bar = (List<Integer>) conversionService.convert(foo,
+		List<Integer> bar = (List<Integer>) conversionService.convert(foo, TypeDescriptor.forObject(foo),
 				new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(bar).containsExactly(1, 2, 3);
+		assertThat((int) bar.get(0)).isEqualTo((int) Integer.valueOf(1));
+		assertThat((int) bar.get(1)).isEqualTo((int) Integer.valueOf(2));
+		assertThat((int) bar.get(2)).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	@Test
@@ -729,18 +710,21 @@ class DefaultConversionServiceTests {
 		@SuppressWarnings("unchecked")
 		List<Integer> bar = (List<Integer>) conversionService.convert(null,
 				TypeDescriptor.valueOf(LinkedHashSet.class), new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(bar).isNull();
+		assertThat((Object) bar).isNull();
 	}
 
 	@Test
-	@SuppressWarnings({ "rawtypes", "unchecked" })
+	@SuppressWarnings("rawtypes")
 	void convertCollectionToCollectionNotGeneric() {
 		Set<String> foo = new LinkedHashSet<>();
 		foo.add("1");
 		foo.add("2");
 		foo.add("3");
-		List bar = (List) conversionService.convert(foo, TypeDescriptor.valueOf(LinkedHashSet.class), TypeDescriptor.valueOf(List.class));
-		assertThat(bar).containsExactly("1", "2", "3");
+		List bar = (List) conversionService.convert(foo, TypeDescriptor.valueOf(LinkedHashSet.class), TypeDescriptor
+				.valueOf(List.class));
+		assertThat(bar.get(0)).isEqualTo("1");
+		assertThat(bar.get(1)).isEqualTo("2");
+		assertThat(bar.get(2)).isEqualTo("3");
 	}
 
 	@Test
@@ -753,25 +737,34 @@ class DefaultConversionServiceTests {
 		Collection values = map.values();
 		List<Integer> bar = (List<Integer>) conversionService.convert(values,
 				TypeDescriptor.forObject(values), new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(bar).containsExactly(1, 2, 3);
+		assertThat(bar.size()).isEqualTo(3);
+		assertThat((int) bar.get(0)).isEqualTo((int) Integer.valueOf(1));
+		assertThat((int) bar.get(1)).isEqualTo((int) Integer.valueOf(2));
+		assertThat((int) bar.get(2)).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	@Test
 	void collection() {
-		List<String> strings = List.of("3", "9");
+		List<String> strings = new ArrayList<>();
+		strings.add("3");
+		strings.add("9");
 		@SuppressWarnings("unchecked")
 		List<Integer> integers = (List<Integer>) conversionService.convert(strings,
 				TypeDescriptor.collection(List.class, TypeDescriptor.valueOf(Integer.class)));
-		assertThat(integers).containsExactly(3, 9);
+		assertThat((int) integers.get(0)).isEqualTo((int) Integer.valueOf(3));
+		assertThat((int) integers.get(1)).isEqualTo((int) Integer.valueOf(9));
 	}
 
 	@Test
 	void convertMapToMap() throws Exception {
-		Map<String, String> foo = Map.of("1", "BAR", "2", "BAZ");
+		Map<String, String> foo = new HashMap<>();
+		foo.put("1", "BAR");
+		foo.put("2", "BAZ");
 		@SuppressWarnings("unchecked")
 		Map<Integer, Foo> map = (Map<Integer, Foo>) conversionService.convert(foo,
 				TypeDescriptor.forObject(foo), new TypeDescriptor(getClass().getField("genericMap")));
-		assertThat(map).contains(entry(1, Foo.BAR), entry(2, Foo.BAZ));
+		assertThat(map.get(1)).isEqualTo(Foo.BAR);
+		assertThat(map.get(2)).isEqualTo(Foo.BAZ);
 	}
 
 	@Test
@@ -779,9 +772,8 @@ class DefaultConversionServiceTests {
 		Map<String, Integer> hashMap = new LinkedHashMap<>();
 		hashMap.put("1", 1);
 		hashMap.put("2", 2);
-		@SuppressWarnings("unchecked")
-		List<Integer> converted = conversionService.convert(hashMap.values(), List.class);
-		assertThat(converted).containsExactly(1, 2);
+		List<?> converted = conversionService.convert(hashMap.values(), List.class);
+		assertThat(converted).isEqualTo(Arrays.asList(1, 2));
 	}
 
 	@Test
@@ -792,7 +784,8 @@ class DefaultConversionServiceTests {
 		@SuppressWarnings("unchecked")
 		Map<Integer, Integer> integers = (Map<Integer, Integer>) conversionService.convert(strings,
 				TypeDescriptor.map(Map.class, TypeDescriptor.valueOf(Integer.class), TypeDescriptor.valueOf(Integer.class)));
-		assertThat(integers).contains(entry(3, 9), entry(6, 31));
+		assertThat((int) integers.get(3)).isEqualTo((int) Integer.valueOf(9));
+		assertThat((int) integers.get(6)).isEqualTo((int) Integer.valueOf(31));
 	}
 
 	@Test
@@ -801,25 +794,25 @@ class DefaultConversionServiceTests {
 		foo.setProperty("1", "BAR");
 		foo.setProperty("2", "BAZ");
 		String result = conversionService.convert(foo, String.class);
-		assertThat(result).contains("1=BAR", "2=BAZ");
+		assertThat(result.contains("1=BAR")).isTrue();
+		assertThat(result.contains("2=BAZ")).isTrue();
 	}
 
 	@Test
 	void convertStringToProperties() {
-		Properties result = conversionService.convert("""
-				a=b
-				c=2
-				d=""", Properties.class);
-		assertThat(result).contains(entry("a", "b"), entry("c", "2"), entry("d", ""));
+		Properties result = conversionService.convert("a=b\nc=2\nd=", Properties.class);
+		assertThat(result.size()).isEqualTo(3);
+		assertThat(result.getProperty("a")).isEqualTo("b");
+		assertThat(result.getProperty("c")).isEqualTo("2");
+		assertThat(result.getProperty("d")).isEqualTo("");
 	}
 
 	@Test
-	void convertStringToPropertiesWithLeadingSpaces() {
-		Properties result = conversionService.convert("""
-				\s  foo=bar
-				\s   bar=baz
-				\s    baz=boo""", Properties.class);
-		assertThat(result).contains(entry("foo", "bar"), entry("bar", "baz"), entry("baz", "boo"));
+	void convertStringToPropertiesWithSpaces() {
+		Properties result = conversionService.convert("   foo=bar\n   bar=baz\n    baz=boop", Properties.class);
+		assertThat(result.get("foo")).isEqualTo("bar");
+		assertThat(result.get("bar")).isEqualTo("baz");
+		assertThat(result.get("baz")).isEqualTo("boop");
 	}
 
 	// generic object conversion
@@ -873,7 +866,7 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertObjectToStringWithJavaTimeOfMethodPresent() {
-		assertThat(conversionService.convert(ZoneId.of("GMT+1"), String.class)).startsWith("GMT+");
+		assertThat(conversionService.convert(ZoneId.of("GMT+1"), String.class).startsWith("GMT+")).isTrue();
 	}
 
 	@Test
@@ -888,8 +881,8 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertObjectToObjectNoValueOfMethodOrConstructor() {
-		assertThatExceptionOfType(ConverterNotFoundException.class)
-				.isThrownBy(() -> conversionService.convert(3L, SSN.class));
+		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
+				conversionService.convert(Long.valueOf(3), SSN.class));
 	}
 
 	@Test
@@ -902,7 +895,7 @@ class DefaultConversionServiceTests {
 	void convertObjectToObjectFinderMethodWithNull() {
 		TestEntity entity = (TestEntity) conversionService.convert(null,
 				TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(TestEntity.class));
-		assertThat(entity).isNull();
+		assertThat((Object) entity).isNull();
 	}
 
 	@Test
@@ -920,20 +913,21 @@ class DefaultConversionServiceTests {
 	@Test
 	void convertStringToCharArray() {
 		char[] converted = conversionService.convert("a,b,c", char[].class);
-		assertThat(converted).containsExactly('a', 'b', 'c');
+		assertThat(converted).isEqualTo(new char[]{'a', 'b', 'c'});
 	}
 
 	@Test
 	void convertStringToCustomCharArray() {
 		conversionService.addConverter(String.class, char[].class, String::toCharArray);
 		char[] converted = conversionService.convert("abc", char[].class);
-		assertThat(converted).containsExactly('a', 'b', 'c');
+		assertThat(converted).isEqualTo(new char[] {'a', 'b', 'c'});
 	}
 
 	@Test
 	@SuppressWarnings("unchecked")
 	void multidimensionalArrayToListConversionShouldConvertEntriesCorrectly() {
-		String[][] grid = new String[][] {{"1", "2", "3", "4"}, {"5", "6", "7", "8"}, {"9", "10", "11", "12"}};
+		String[][] grid = new String[][] {new String[] {"1", "2", "3", "4"}, new String[] {"5", "6", "7", "8"},
+				new String[] {"9", "10", "11", "12"}};
 		List<String[]> converted = conversionService.convert(grid, List.class);
 		String[][] convertedBack = conversionService.convert(converted, String[][].class);
 		assertThat(convertedBack).isEqualTo(grid);
@@ -942,10 +936,10 @@ class DefaultConversionServiceTests {
 	@Test
 	void convertCannotOptimizeArray() {
 		conversionService.addConverter(Byte.class, Byte.class, source -> (byte) (source + 1));
-		byte[] byteArray = {1, 2, 3};
+		byte[] byteArray = new byte[] {1, 2, 3};
 		byte[] converted = conversionService.convert(byteArray, byte[].class);
 		assertThat(converted).isNotSameAs(byteArray);
-		assertThat(converted).containsExactly(2, 3, 4);
+		assertThat(converted).isEqualTo(new byte[]{2, 3, 4});
 	}
 
 	@Test
@@ -956,7 +950,7 @@ class DefaultConversionServiceTests {
 		TypeDescriptor descriptor = new TypeDescriptor(parameter);
 		Object actual = conversionService.convert("1,2,3", TypeDescriptor.valueOf(String.class), descriptor);
 		assertThat(actual.getClass()).isEqualTo(Optional.class);
-		assertThat(((Optional<List<Integer>>) actual)).contains(List.of(1, 2, 3));
+		assertThat(((Optional<List<Integer>>) actual).get()).isEqualTo(Arrays.asList(1, 2, 3));
 	}
 
 	@Test
@@ -1107,10 +1101,11 @@ class DefaultConversionServiceTests {
 		}
 
 		@Override
-		public boolean equals(@Nullable Object o) {
-			if (!(o instanceof SSN ssn)) {
+		public boolean equals(Object o) {
+			if (!(o instanceof SSN)) {
 				return false;
 			}
+			SSN ssn = (SSN) o;
 			return this.value.equals(ssn.value);
 		}
 
@@ -1147,10 +1142,11 @@ class DefaultConversionServiceTests {
 		}
 
 		@Override
-		public boolean equals(@Nullable Object o) {
-			if (!(o instanceof ISBN isbn)) {
+		public boolean equals(Object o) {
+			if (!(o instanceof ISBN)) {
 				return false;
 			}
+			ISBN isbn = (ISBN) o;
 			return this.value.equals(isbn.value);
 		}
 
