@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,6 +20,7 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Executable;
 import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
 import java.lang.reflect.Parameter;
 import java.util.Arrays;
 import java.util.List;
@@ -28,7 +29,6 @@ import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.TestInstance.Lifecycle;
 import org.junit.jupiter.api.extension.AfterAllCallback;
 import org.junit.jupiter.api.extension.AfterEachCallback;
 import org.junit.jupiter.api.extension.AfterTestExecutionCallback;
@@ -41,7 +41,6 @@ import org.junit.jupiter.api.extension.ExtensionContext.Store;
 import org.junit.jupiter.api.extension.ParameterContext;
 import org.junit.jupiter.api.extension.ParameterResolver;
 import org.junit.jupiter.api.extension.TestInstancePostProcessor;
-import org.junit.jupiter.api.parallel.ExecutionMode;
 import org.junit.platform.commons.annotation.Testable;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -51,12 +50,9 @@ import org.springframework.core.annotation.MergedAnnotations;
 import org.springframework.core.annotation.MergedAnnotations.SearchStrategy;
 import org.springframework.core.annotation.RepeatableContainers;
 import org.springframework.lang.Nullable;
-import org.springframework.test.context.MethodInvoker;
 import org.springframework.test.context.TestConstructor;
-import org.springframework.test.context.TestContextAnnotationUtils;
 import org.springframework.test.context.TestContextManager;
 import org.springframework.test.context.event.ApplicationEvents;
-import org.springframework.test.context.event.RecordApplicationEvents;
 import org.springframework.test.context.support.PropertyProvider;
 import org.springframework.test.context.support.TestConstructorUtils;
 import org.springframework.util.Assert;
@@ -72,7 +68,6 @@ import org.springframework.util.ReflectionUtils.MethodFilter;
  * {@code @SpringJUnitWebConfig}.
  *
  * @author Sam Brannen
- * @author Simon Baslé
  * @since 5.0
  * @see org.springframework.test.context.junit.jupiter.EnabledIf
  * @see org.springframework.test.context.junit.jupiter.DisabledIf
@@ -97,27 +92,17 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 	private static final Namespace AUTOWIRED_VALIDATION_NAMESPACE =
 			Namespace.create(SpringExtension.class.getName() + "#autowired.validation");
 
-	/**
-	 * <em>Marker</em> string constant to represent that no violations were detected.
-	 * <p>The value is an empty string which allows this class to perform quick
-	 * {@code isEmpty()} checks instead of performing unnecessary string comparisons.
-	 */
-	private static final String NO_VIOLATIONS_DETECTED = "";
-
-	/**
-	 * {@link Namespace} in which {@code @RecordApplicationEvents} validation error messages
-	 * are stored, keyed by test class.
-	 */
-	private static final Namespace RECORD_APPLICATION_EVENTS_VALIDATION_NAMESPACE =
-			Namespace.create(SpringExtension.class.getName() + "#recordApplicationEvents.validation");
+	private static final String NO_AUTOWIRED_VIOLATIONS_DETECTED = "NO AUTOWIRED VIOLATIONS DETECTED";
 
 	// Note that @Test, @TestFactory, @TestTemplate, @RepeatedTest, and @ParameterizedTest
 	// are all meta-annotated with @Testable.
 	private static final List<Class<? extends Annotation>> JUPITER_ANNOTATION_TYPES =
-			List.of(BeforeAll.class, AfterAll.class, BeforeEach.class, AfterEach.class, Testable.class);
+			Arrays.asList(BeforeAll.class, AfterAll.class, BeforeEach.class, AfterEach.class, Testable.class);
 
 	private static final MethodFilter autowiredTestOrLifecycleMethodFilter =
-			ReflectionUtils.USER_DECLARED_METHODS.and(SpringExtension::isAutowiredTestOrLifecycleMethod);
+			ReflectionUtils.USER_DECLARED_METHODS
+					.and(method -> !Modifier.isPrivate(method.getModifiers()))
+					.and(SpringExtension::isAutowiredTestOrLifecycleMethod);
 
 
 	/**
@@ -125,9 +110,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 	 */
 	@Override
 	public void beforeAll(ExtensionContext context) throws Exception {
-		TestContextManager testContextManager = getTestContextManager(context);
-		registerMethodInvoker(testContextManager, context);
-		testContextManager.beforeTestClass();
+		getTestContextManager(context).beforeTestClass();
 	}
 
 	/**
@@ -136,9 +119,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 	@Override
 	public void afterAll(ExtensionContext context) throws Exception {
 		try {
-			TestContextManager testContextManager = getTestContextManager(context);
-			registerMethodInvoker(testContextManager, context);
-			testContextManager.afterTestClass();
+			getTestContextManager(context).afterTestClass();
 		}
 		finally {
 			getStore(context).remove(context.getRequiredTestClass());
@@ -154,10 +135,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 	@Override
 	public void postProcessTestInstance(Object testInstance, ExtensionContext context) throws Exception {
 		validateAutowiredConfig(context);
-		validateRecordApplicationEventsConfig(context);
-		TestContextManager testContextManager = getTestContextManager(context);
-		registerMethodInvoker(testContextManager, context);
-		testContextManager.prepareTestInstance(testInstance);
+		getTestContextManager(context).prepareTestInstance(testInstance);
 	}
 
 	/**
@@ -173,7 +151,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 		String errorMessage = store.getOrComputeIfAbsent(context.getRequiredTestClass(), testClass -> {
 				Method[] methodsWithErrors =
 						ReflectionUtils.getUniqueDeclaredMethods(testClass, autowiredTestOrLifecycleMethodFilter);
-				return (methodsWithErrors.length == 0 ? NO_VIOLATIONS_DETECTED :
+				return (methodsWithErrors.length == 0 ? NO_AUTOWIRED_VIOLATIONS_DETECTED :
 						String.format(
 								"Test methods and test lifecycle methods must not be annotated with @Autowired. " +
 								"You should instead annotate individual method parameters with @Autowired, " +
@@ -181,46 +159,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 								testClass.getName(), Arrays.toString(methodsWithErrors)));
 			}, String.class);
 
-		if (!errorMessage.isEmpty()) {
-			throw new IllegalStateException(errorMessage);
-		}
-	}
-
-	/**
-	 * Validate that the test class or its enclosing class doesn't attempt to record
-	 * application events in a parallel mode that makes it non-deterministic
-	 * ({@code @TestInstance(PER_CLASS)} and {@code @Execution(CONCURRENT)}
-	 * combination).
-	 * @since 6.1
-	 */
-	private void validateRecordApplicationEventsConfig(ExtensionContext context) {
-		// We save the result in the ExtensionContext.Store so that we don't
-		// re-validate the configuration for the same test class multiple times.
-		Store store = context.getStore(RECORD_APPLICATION_EVENTS_VALIDATION_NAMESPACE);
-
-		String errorMessage = store.getOrComputeIfAbsent(context.getRequiredTestClass(), testClass -> {
-			boolean recording = TestContextAnnotationUtils.hasAnnotation(testClass, RecordApplicationEvents.class);
-			if (!recording) {
-				return NO_VIOLATIONS_DETECTED;
-			}
-
-			if (context.getTestInstanceLifecycle().orElse(Lifecycle.PER_METHOD) == Lifecycle.PER_METHOD) {
-				return NO_VIOLATIONS_DETECTED;
-			}
-
-			if (context.getExecutionMode() == ExecutionMode.SAME_THREAD) {
-				return NO_VIOLATIONS_DETECTED;
-			}
-
-			return """
-					Test classes or @Nested test classes that @RecordApplicationEvents must not be run \
-					in parallel with the @TestInstance(PER_CLASS) lifecycle mode. Configure either \
-					@Execution(SAME_THREAD) or @TestInstance(PER_METHOD) semantics, or disable parallel \
-					execution altogether. Note that when recording events in parallel, one might see events \
-					published by other tests since the application context may be shared.""";
-		}, String.class);
-
-		if (!errorMessage.isEmpty()) {
+		if (errorMessage != NO_AUTOWIRED_VIOLATIONS_DETECTED) {
 			throw new IllegalStateException(errorMessage);
 		}
 	}
@@ -232,9 +171,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 	public void beforeEach(ExtensionContext context) throws Exception {
 		Object testInstance = context.getRequiredTestInstance();
 		Method testMethod = context.getRequiredTestMethod();
-		TestContextManager testContextManager = getTestContextManager(context);
-		registerMethodInvoker(testContextManager, context);
-		testContextManager.beforeTestMethod(testInstance, testMethod);
+		getTestContextManager(context).beforeTestMethod(testInstance, testMethod);
 	}
 
 	/**
@@ -244,9 +181,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 	public void beforeTestExecution(ExtensionContext context) throws Exception {
 		Object testInstance = context.getRequiredTestInstance();
 		Method testMethod = context.getRequiredTestMethod();
-		TestContextManager testContextManager = getTestContextManager(context);
-		registerMethodInvoker(testContextManager, context);
-		testContextManager.beforeTestExecution(testInstance, testMethod);
+		getTestContextManager(context).beforeTestExecution(testInstance, testMethod);
 	}
 
 	/**
@@ -257,9 +192,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 		Object testInstance = context.getRequiredTestInstance();
 		Method testMethod = context.getRequiredTestMethod();
 		Throwable testException = context.getExecutionException().orElse(null);
-		TestContextManager testContextManager = getTestContextManager(context);
-		registerMethodInvoker(testContextManager, context);
-		testContextManager.afterTestExecution(testInstance, testMethod, testException);
+		getTestContextManager(context).afterTestExecution(testInstance, testMethod, testException);
 	}
 
 	/**
@@ -270,9 +203,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 		Object testInstance = context.getRequiredTestInstance();
 		Method testMethod = context.getRequiredTestMethod();
 		Throwable testException = context.getExecutionException().orElse(null);
-		TestContextManager testContextManager = getTestContextManager(context);
-		registerMethodInvoker(testContextManager, context);
-		testContextManager.afterTestMethod(testInstance, testMethod, testException);
+		getTestContextManager(context).afterTestMethod(testInstance, testMethod, testException);
 	}
 
 	/**
@@ -365,18 +296,6 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 
 	private static Store getStore(ExtensionContext context) {
 		return context.getRoot().getStore(TEST_CONTEXT_MANAGER_NAMESPACE);
-	}
-
-	/**
-	 * Register a {@link MethodInvoker} adaptor for Jupiter's
-	 * {@link org.junit.jupiter.api.extension.ExecutableInvoker ExecutableInvoker}
-	 * in the {@link org.springframework.test.context.TestContext TestContext} for
-	 * the supplied {@link TestContextManager}.
-	 * @since 6.1
-	 */
-	@SuppressWarnings("NullAway")
-	private static void registerMethodInvoker(TestContextManager testContextManager, ExtensionContext context) {
-		testContextManager.getTestContext().setMethodInvoker(context.getExecutableInvoker()::invoke);
 	}
 
 	private static boolean isAutowiredTestOrLifecycleMethod(Method method) {
