@@ -30,19 +30,16 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
-import java.util.AbstractSet;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Iterator;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 import java.util.StringJoiner;
-import java.util.function.BiConsumer;
 import java.util.stream.Collectors;
 
 import org.springframework.lang.Nullable;
@@ -65,27 +62,7 @@ import org.springframework.util.StringUtils;
  * <li>{@link #set(String, String)} sets the header value to a single string value</li>
  * </ul>
  *
- * <p>Note that {@code HttpHeaders} instances created by the default constructor
- * treat header names in a case-insensitive manner. Instances created with the
- * {@link #HttpHeaders(MultiValueMap)} constructor like those instantiated
- * internally by the framework to adapt to existing HTTP headers data structures
- * do guarantee per-header get/set/add operations to be case-insensitive as
- * mandated by the HTTP specification. However, it is not necessarily the case
- * for operations that deal with the collection as a whole (like {@code size()},
- * {@code values()}, {@code keySet()} and {@code entrySet()}). Prefer using
- * {@link #headerSet()} for these cases.
- *
- * <p>Some backing implementations can store header names in a case-sensitive
- * manner, which will lead to duplicates during the entrySet() iteration where
- * multiple occurrences of a header name can surface depending on letter casing
- * but each such entry has the full {@code List} of values. &mdash; This can be
- * problematic for example when copying headers into a new instance by iterating
- * over the old instance's {@code entrySet()} and using
- * {@link #addAll(String, List)} rather than {@link #put(String, List)}.
- *
- * <p>This class is meant to reference "well-known" headers supported by Spring
- * Framework. If your application or library relies on other headers defined in RFCs,
- * please use methods that accept the header name as a parameter.
+ * <p>Note that {@code HttpHeaders} generally treats header names in a case-insensitive manner.
  *
  * @author Arjen Poutsma
  * @author Sebastien Deleuze
@@ -93,7 +70,6 @@ import org.springframework.util.StringUtils;
  * @author Juergen Hoeller
  * @author Josh Long
  * @author Sam Brannen
- * @author Simon Baslé
  * @since 3.0
  */
 public class HttpHeaders implements MultiValueMap<String, String>, Serializable {
@@ -415,7 +391,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	 */
 	public static final HttpHeaders EMPTY = new ReadOnlyHttpHeaders(new LinkedMultiValueMap<>());
 
-	private static final DecimalFormatSymbols DECIMAL_FORMAT_SYMBOLS = new DecimalFormatSymbols(Locale.ROOT);
+	private static final DecimalFormatSymbols DECIMAL_FORMAT_SYMBOLS = new DecimalFormatSymbols(Locale.ENGLISH);
 
 	private static final ZoneId GMT = ZoneId.of("GMT");
 
@@ -436,16 +412,15 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	};
 
 
-	@SuppressWarnings("serial")
 	final MultiValueMap<String, String> headers;
 
 
 	/**
-	 * Construct a new, empty instance of the {@code HttpHeaders} object
-	 * using an underlying case-insensitive map.
+	 * Construct a new, empty instance of the {@code HttpHeaders} object.
+	 * <p>This is the common constructor, using a case-insensitive map structure.
 	 */
 	public HttpHeaders() {
-		this(CollectionUtils.toMultiValueMap(new LinkedCaseInsensitiveMap<>(8, Locale.ROOT)));
+		this(CollectionUtils.toMultiValueMap(new LinkedCaseInsensitiveMap<>(8, Locale.ENGLISH)));
 	}
 
 	/**
@@ -457,18 +432,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	 */
 	public HttpHeaders(MultiValueMap<String, String> headers) {
 		Assert.notNull(headers, "MultiValueMap must not be null");
-		if (headers == EMPTY) {
-			this.headers = CollectionUtils.toMultiValueMap(new LinkedCaseInsensitiveMap<>(8, Locale.ENGLISH));
-		}
-		else if (headers instanceof HttpHeaders httpHeaders) {
-			while (httpHeaders.headers instanceof HttpHeaders wrapped) {
-				httpHeaders = wrapped;
-			}
-			this.headers = httpHeaders.headers;
-		}
-		else {
-			this.headers = headers;
-		}
+		this.headers = headers;
 	}
 
 
@@ -513,7 +477,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 						range.getWeight() == Locale.LanguageRange.MAX_WEIGHT ?
 								range.getRange() :
 								range.getRange() + ";q=" + decimal.format(range.getWeight()))
-				.toList();
+				.collect(Collectors.toList());
 		set(ACCEPT_LANGUAGE, toCommaDelimitedString(values));
 	}
 
@@ -528,20 +492,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	 */
 	public List<Locale.LanguageRange> getAcceptLanguage() {
 		String value = getFirst(ACCEPT_LANGUAGE);
-		if (StringUtils.hasText(value)) {
-			try {
-				return Locale.LanguageRange.parse(value);
-			}
-			catch (IllegalArgumentException ignored) {
-				String[] tokens = StringUtils.tokenizeToStringArray(value, ",");
-				for (int i = 0; i < tokens.length; i++) {
-					tokens[i] = StringUtils.trimTrailingCharacter(tokens[i], ';');
-				}
-				value = StringUtils.arrayToCommaDelimitedString(tokens);
-				return Locale.LanguageRange.parse(value);
-			}
-		}
-		return Collections.emptyList();
+		return (StringUtils.hasText(value) ? Locale.LanguageRange.parse(value) : Collections.emptyList());
 	}
 
 	/**
@@ -551,7 +502,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	public void setAcceptLanguageAsLocales(List<Locale> locales) {
 		setAcceptLanguage(locales.stream()
 				.map(locale -> new Locale.LanguageRange(locale.toLanguageTag()))
-				.toList());
+				.collect(Collectors.toList()));
 	}
 
 	/**
@@ -566,14 +517,10 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		if (ranges.isEmpty()) {
 			return Collections.emptyList();
 		}
-
-		List<Locale> locales = new ArrayList<>(ranges.size());
-		for (Locale.LanguageRange range : ranges) {
-			if (!range.getRange().startsWith("*")) {
-				locales.add(Locale.forLanguageTag(range.getRange()));
-			}
-		}
-		return locales;
+		return ranges.stream()
+				.map(range -> Locale.forLanguageTag(range.getRange()))
+				.filter(locale -> StringUtils.hasText(locale.getDisplayName()))
+				.collect(Collectors.toList());
 	}
 
 	/**
@@ -634,19 +581,18 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	 * Return the value of the {@code Access-Control-Allow-Methods} response header.
 	 */
 	public List<HttpMethod> getAccessControlAllowMethods() {
+		List<HttpMethod> result = new ArrayList<>();
 		String value = getFirst(ACCESS_CONTROL_ALLOW_METHODS);
 		if (value != null) {
 			String[] tokens = StringUtils.tokenizeToStringArray(value, ",");
-			List<HttpMethod> result = new ArrayList<>(tokens.length);
 			for (String token : tokens) {
-				HttpMethod method = HttpMethod.valueOf(token);
-				result.add(method);
+				HttpMethod resolved = HttpMethod.resolve(token);
+				if (resolved != null) {
+					result.add(resolved);
+				}
 			}
-			return result;
 		}
-		else {
-			return Collections.emptyList();
-		}
+		return result;
 	}
 
 	/**
@@ -728,13 +674,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	 */
 	@Nullable
 	public HttpMethod getAccessControlRequestMethod() {
-		String requestMethod = getFirst(ACCESS_CONTROL_REQUEST_METHOD);
-		if (requestMethod != null) {
-			return HttpMethod.valueOf(requestMethod);
-		}
-		else {
-			return null;
-		}
+		return HttpMethod.resolve(getFirst(ACCESS_CONTROL_REQUEST_METHOD));
 	}
 
 	/**
@@ -744,7 +684,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	public void setAcceptCharset(List<Charset> acceptableCharsets) {
 		StringJoiner joiner = new StringJoiner(", ");
 		for (Charset charset : acceptableCharsets) {
-			joiner.add(charset.name().toLowerCase(Locale.ROOT));
+			joiner.add(charset.name().toLowerCase(Locale.ENGLISH));
 		}
 		set(ACCEPT_CHARSET, joiner.toString());
 	}
@@ -795,15 +735,17 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		String value = getFirst(ALLOW);
 		if (StringUtils.hasLength(value)) {
 			String[] tokens = StringUtils.tokenizeToStringArray(value, ",");
-			Set<HttpMethod> result = CollectionUtils.newLinkedHashSet(tokens.length);
+			List<HttpMethod> result = new ArrayList<>(tokens.length);
 			for (String token : tokens) {
-				HttpMethod method = HttpMethod.valueOf(token);
-				result.add(method);
+				HttpMethod resolved = HttpMethod.resolve(token);
+				if (resolved != null) {
+					result.add(resolved);
+				}
 			}
-			return result;
+			return EnumSet.copyOf(result);
 		}
 		else {
-			return Collections.emptySet();
+			return EnumSet.noneOf(HttpMethod.class);
 		}
 	}
 
@@ -1001,13 +943,8 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	/**
 	 * Set the length of the body in bytes, as specified by the
 	 * {@code Content-Length} header.
-	 * @param contentLength content length (greater than or equal to zero)
-	 * @throws IllegalArgumentException if the content length is negative
 	 */
 	public void setContentLength(long contentLength) {
-		if (contentLength < 0) {
-			throw new IllegalArgumentException("Content-Length must be a non-negative number");
-		}
 		set(CONTENT_LENGTH, Long.toString(contentLength));
 	}
 
@@ -1090,9 +1027,11 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	/**
 	 * Set the (new) entity tag of the body, as specified by the {@code ETag} header.
 	 */
-	public void setETag(@Nullable String tag) {
-		if (tag != null) {
-			set(ETAG, ETag.quoteETagIfNecessary(tag));
+	public void setETag(@Nullable String etag) {
+		if (etag != null) {
+			Assert.isTrue(etag.startsWith("\"") || etag.startsWith("W/\""), "ETag does not start with W/\" or \"");
+			Assert.isTrue(etag.endsWith("\""), "ETag does not end with \"");
+			set(ETAG, etag);
 		}
 		else {
 			remove(ETAG);
@@ -1163,7 +1102,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 			set(HOST, value);
 		}
 		else {
-			remove(HOST);
+			remove(HOST, null);
 		}
 	}
 
@@ -1445,7 +1384,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	}
 
 	/**
-	 * Set the request header names (for example, "Accept-Language") for which the
+	 * Set the request header names (e.g. "Accept-Language") for which the
 	 * response is subject to content negotiation and variances based on the
 	 * value of those request headers.
 	 * @param requestHeaders the request header names
@@ -1583,11 +1522,8 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	}
 
 	/**
-	 * Return all values of a given header name, even if this header is set
-	 * multiple times.
-	 * <p>This method supports double-quoted values, as described in
-	 * <a href="https://www.rfc-editor.org/rfc/rfc9110.html#section-5.5-8">RFC
-	 * 9110, section 5.5</a>.
+	 * Return all values of a given header name,
+	 * even if this header is set multiple times.
 	 * @param headerName the header name
 	 * @return all associated values
 	 * @since 4.3
@@ -1598,59 +1534,12 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 			List<String> result = new ArrayList<>();
 			for (String value : values) {
 				if (value != null) {
-					result.addAll(tokenizeQuoted(value));
+					Collections.addAll(result, StringUtils.tokenizeToStringArray(value, ","));
 				}
 			}
 			return result;
 		}
 		return Collections.emptyList();
-	}
-
-	private static List<String> tokenizeQuoted(String str) {
-		List<String> tokens = new ArrayList<>();
-		boolean quoted = false;
-		boolean trim = true;
-		StringBuilder builder = new StringBuilder(str.length());
-		for (int i = 0; i < str.length(); ++i) {
-			char ch = str.charAt(i);
-			if (ch == '"') {
-				if (builder.isEmpty()) {
-					quoted = true;
-				}
-				else if (quoted) {
-					quoted = false;
-					trim = false;
-				}
-				else {
-					builder.append(ch);
-				}
-			}
-			else if (ch == '\\' && quoted && i < str.length() - 1) {
-				builder.append(str.charAt(++i));
-			}
-			else if (ch == ',' && !quoted) {
-				addToken(builder, tokens, trim);
-				builder.setLength(0);
-				trim = false;
-			}
-			else if (quoted || (!builder.isEmpty() && trim) || !Character.isWhitespace(ch)) {
-				builder.append(ch);
-			}
-		}
-		if (!builder.isEmpty()) {
-			addToken(builder, tokens, trim);
-		}
-		return tokens;
-	}
-
-	private static void addToken(StringBuilder builder, List<String> tokens, boolean trim) {
-		String token = builder.toString();
-		if (trim) {
-			token = token.trim();
-		}
-		if (!token.isEmpty()) {
-			tokens.add(token);
-		}
 	}
 
 	/**
@@ -1795,12 +1684,13 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		return this.headers.toSingleValueMap();
 	}
 
-	@Override
-	public Map<String, String> asSingleValueMap() {
-		return this.headers.asSingleValueMap();
-	}
 
 	// Map implementation
+
+	@Override
+	public int size() {
+		return this.headers.size();
+	}
 
 	@Override
 	public boolean isEmpty() {
@@ -1844,86 +1734,37 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	}
 
 	@Override
-	public List<String> putIfAbsent(String key, List<String> value) {
-		return this.headers.putIfAbsent(key, value);
-	}
-
-	// Map/MultiValueMap methods that can have duplicate header names: size/keySet/values/entrySet/forEach
-
-	/**
-	 * Return the number of headers in the collection. This can be inflated,
-	 * see {@link HttpHeaders class level javadoc}.
-	 */
-	@Override
-	public int size() {
-		return this.headers.size();
-	}
-
-	/**
-	 * Return a {@link Set} view of header names. This can include multiple
-	 * casing variants of a given header name, see
-	 * {@link HttpHeaders class level javadoc}.
-	 */
-	@Override
 	public Set<String> keySet() {
 		return this.headers.keySet();
 	}
 
-	/**
-	 * Return a {@link Collection} view of all the header values, reconstructed
-	 * from iterating over the {@link #keySet()}. This can include duplicates if
-	 * multiple casing variants of a given header name are tracked, see
-	 * {@link HttpHeaders class level javadoc}.
-	 */
 	@Override
 	public Collection<List<String>> values() {
 		return this.headers.values();
 	}
 
-	/**
-	 * Return a {@link Set} views of header entries, reconstructed from
-	 * iterating over the {@link #keySet()}. This can include duplicate entries
-	 * if multiple casing variants of a given header name are tracked, see
-	 * {@link HttpHeaders class level javadoc}.
-	 * @see #headerSet()
-	 */
 	@Override
 	public Set<Entry<String, List<String>>> entrySet() {
 		return this.headers.entrySet();
 	}
 
-	/**
-	 * Perform an action over each header, as when iterated via
-	 * {@link #entrySet()}. This can include duplicate entries
-	 * if multiple casing variants of a given header name are tracked, see
-	 * {@link HttpHeaders class level javadoc}.
-	 * @param action the action to be performed for each entry
-	 */
-	@Override
-	public void forEach(BiConsumer<? super String, ? super List<String>> action) {
-		this.headers.forEach(action);
-	}
-
-	/**
-	 * Return a view of the headers as an entry {@code Set} of key-list pairs.
-	 * Both {@link Iterator#remove()} and {@link java.util.Map.Entry#setValue}
-	 * are supported and mutate the headers.
-	 * <p>This collection is guaranteed to contain one entry per header name
-	 * even if the backing structure stores multiple casing variants of names,
-	 * at the cost of first copying the names into a case-insensitive set for
-	 * filtering the iteration.
-	 * @return a {@code Set} view that iterates over all headers in a
-	 * case-insensitive manner
-	 * @since 6.1.15
-	 */
-	public Set<Entry<String, List<String>>> headerSet() {
-		return new CaseInsensitiveEntrySet(this.headers);
-	}
-
 
 	@Override
 	public boolean equals(@Nullable Object other) {
-		return (this == other || (other instanceof HttpHeaders that && unwrap(this).equals(unwrap(that))));
+		if (this == other) {
+			return true;
+		}
+		if (!(other instanceof HttpHeaders)) {
+			return false;
+		}
+		return unwrap(this).equals(unwrap((HttpHeaders) other));
+	}
+
+	private static MultiValueMap<String, String> unwrap(HttpHeaders headers) {
+		while (headers.headers instanceof HttpHeaders) {
+			headers = (HttpHeaders) headers.headers;
+		}
+		return headers.headers;
 	}
 
 	@Override
@@ -1946,15 +1787,15 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	 * @since 5.3
 	 */
 	public static HttpHeaders readOnlyHttpHeaders(MultiValueMap<String, String> headers) {
-		return (headers instanceof HttpHeaders httpHeaders ? readOnlyHttpHeaders(httpHeaders) :
-				new ReadOnlyHttpHeaders(headers));
+		return (headers instanceof HttpHeaders ?
+				readOnlyHttpHeaders((HttpHeaders) headers) : new ReadOnlyHttpHeaders(headers));
 	}
 
 	/**
 	 * Apply a read-only {@code HttpHeaders} wrapper around the given headers, if necessary.
 	 * <p>Also caches the parsed representations of the "Accept" and "Content-Type" headers.
 	 * @param headers the headers to expose
-	 * @return a read-only variant of the headers, or the original headers as-is if already read-only
+	 * @return a read-only variant of the headers, or the original headers as-is
 	 */
 	public static HttpHeaders readOnlyHttpHeaders(HttpHeaders headers) {
 		Assert.notNull(headers, "HttpHeaders must not be null");
@@ -1964,46 +1805,35 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	/**
 	 * Remove any read-only wrapper that may have been previously applied around
 	 * the given headers via {@link #readOnlyHttpHeaders(HttpHeaders)}.
-	 * <p>Once the writable instance is mutated, the read-only instance is likely
-	 * to be out of sync and should be discarded.
 	 * @param headers the headers to expose
 	 * @return a writable variant of the headers, or the original headers as-is
 	 * @since 5.1.1
-	 * @deprecated as of 6.2 in favor of {@link #HttpHeaders(MultiValueMap)}.
 	 */
-	@Deprecated(since = "6.2", forRemoval = true)
 	public static HttpHeaders writableHttpHeaders(HttpHeaders headers) {
-		return new HttpHeaders(headers);
+		Assert.notNull(headers, "HttpHeaders must not be null");
+		if (headers == EMPTY) {
+			return new HttpHeaders();
+		}
+		return (headers instanceof ReadOnlyHttpHeaders ? new HttpHeaders(headers.headers) : headers);
 	}
 
 	/**
 	 * Helps to format HTTP header values, as HTTP header values themselves can
 	 * contain comma-separated values, can become confusing with regular
 	 * {@link Map} formatting that also uses commas between entries.
-	 * <p>Additionally, this method displays the native list of header names
-	 * with the mention {@code with native header names} if the underlying
-	 * implementation stores multiple casing variants of header names (see
-	 * {@link HttpHeaders class level javadoc}).
 	 * @param headers the headers to format
 	 * @return the headers to a String
 	 * @since 5.1.4
 	 */
 	public static String formatHeaders(MultiValueMap<String, String> headers) {
-		Set<String> headerNames = toCaseInsensitiveSet(headers.keySet());
-		String suffix = "]";
-		if (headerNames.size() != headers.size()) {
-			suffix = "] with native header names " + headers.keySet();
-		}
-
-		return headerNames.stream()
-				.map(headerName -> {
-					List<String> values = headers.get(headerName);
-					Assert.notNull(values, "Expected at least one value for header " + headerName);
-					return headerName + ":" + (values.size() == 1 ?
+		return headers.entrySet().stream()
+				.map(entry -> {
+					List<String> values = entry.getValue();
+					return entry.getKey() + ":" + (values.size() == 1 ?
 							"\"" + values.get(0) + "\"" :
 							values.stream().map(s -> "\"" + s + "\"").collect(Collectors.joining(", ")));
 				})
-				.collect(Collectors.joining(", ", "[", suffix));
+				.collect(Collectors.joining(", ", "[", "]"));
 	}
 
 	/**
@@ -2041,118 +1871,11 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		return new String(encodedBytes, charset);
 	}
 
-
-	private static MultiValueMap<String, String> unwrap(HttpHeaders headers) {
-		while (headers.headers instanceof HttpHeaders httpHeaders) {
-			headers = httpHeaders;
-		}
-		return headers.headers;
-	}
-
 	// Package-private: used in ResponseCookie
 	static String formatDate(long date) {
 		Instant instant = Instant.ofEpochMilli(date);
 		ZonedDateTime time = ZonedDateTime.ofInstant(instant, GMT);
 		return DATE_FORMATTER.format(time);
-	}
-
-
-	private static Set<String> toCaseInsensitiveSet(Set<String> originalSet) {
-		final Set<String> deduplicatedSet = Collections.newSetFromMap(
-				new LinkedCaseInsensitiveMap<>(originalSet.size(), Locale.ROOT));
-		// add/addAll (put/putAll in LinkedCaseInsensitiveMap) retain the casing of the last occurrence.
-		// Here we prefer the first.
-		for (String header : originalSet) {
-			//noinspection RedundantCollectionOperation
-			if (!deduplicatedSet.contains(header)) {
-				deduplicatedSet.add(header);
-			}
-		}
-		return deduplicatedSet;
-	}
-
-
-	private static final class CaseInsensitiveEntrySet extends AbstractSet<Entry<String, List<String>>> {
-
-		private final MultiValueMap<String, String> headers;
-		private final Set<String> deduplicatedNames;
-
-		public CaseInsensitiveEntrySet(MultiValueMap<String, String> headers) {
-			this.headers = headers;
-			this.deduplicatedNames = toCaseInsensitiveSet(headers.keySet());
-		}
-
-		@Override
-		public Iterator<Map.Entry<String, List<String>>> iterator() {
-			return new CaseInsensitiveIterator(this.deduplicatedNames.iterator());
-		}
-
-		@Override
-		public int size() {
-			return this.deduplicatedNames.size();
-		}
-
-		private final class CaseInsensitiveIterator implements Iterator<Map.Entry<String, List<String>>> {
-
-			private final Iterator<String> namesIterator;
-
-			@Nullable
-			private String currentName;
-
-			private CaseInsensitiveIterator(Iterator<String> namesIterator) {
-				this.namesIterator = namesIterator;
-				this.currentName = null;
-			}
-
-			@Override
-			public boolean hasNext() {
-				return this.namesIterator.hasNext();
-			}
-
-			@Override
-			public Map.Entry<String, List<String>> next() {
-				this.currentName = this.namesIterator.next();
-				return new CaseInsensitiveEntry(this.currentName);
-			}
-
-			@Override
-			public void remove() {
-				if (this.currentName == null) {
-					throw new IllegalStateException("No current Header in iterator");
-				}
-				if (!CaseInsensitiveEntrySet.this.headers.containsKey(this.currentName)) {
-					throw new IllegalStateException("Header not present: " + this.currentName);
-				}
-				CaseInsensitiveEntrySet.this.headers.remove(this.currentName);
-			}
-		}
-
-		private final class CaseInsensitiveEntry implements Map.Entry<String, List<String>> {
-
-			private final String key;
-
-			CaseInsensitiveEntry(String key) {
-				this.key = key;
-			}
-
-			@Override
-			public String getKey() {
-				return this.key;
-			}
-
-			@Override
-			public List<String> getValue() {
-				return Objects.requireNonNull(CaseInsensitiveEntrySet.this.headers.get(this.key));
-			}
-
-			@Override
-			public List<String> setValue(List<String> value) {
-				List<String> previousValues = Objects.requireNonNull(
-						CaseInsensitiveEntrySet.this.headers.get(this.key));
-				CaseInsensitiveEntrySet.this.headers.put(this.key, value);
-				return previousValues;
-			}
-		}
 	}
 
 }
