@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,7 @@
 package org.springframework.web.cors.reactive;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.apache.commons.logging.Log;
@@ -36,9 +37,9 @@ import org.springframework.web.server.ServerWebExchange;
  * The default implementation of {@link CorsProcessor},
  * as defined by the <a href="https://www.w3.org/TR/cors/">CORS W3C recommendation</a>.
  *
- * <p>Note that when the supplied {@link CorsConfiguration} is {@code null}, this
+ * <p>Note that when input {@link CorsConfiguration} is {@code null}, this
  * implementation does not reject simple or actual requests outright but simply
- * avoids adding CORS headers to the response. CORS processing is also skipped
+ * avoid adding CORS headers to the response. CORS processing is also skipped
  * if the response already contains CORS headers.
  *
  * @author Sebastien Deleuze
@@ -49,7 +50,7 @@ public class DefaultCorsProcessor implements CorsProcessor {
 
 	private static final Log logger = LogFactory.getLog(DefaultCorsProcessor.class);
 
-	private static final List<String> VARY_HEADERS = List.of(
+	private static final List<String> VARY_HEADERS = Arrays.asList(
 			HttpHeaders.ORIGIN, HttpHeaders.ACCESS_CONTROL_REQUEST_METHOD, HttpHeaders.ACCESS_CONTROL_REQUEST_HEADERS);
 
 	/**
@@ -67,6 +68,7 @@ public class DefaultCorsProcessor implements CorsProcessor {
 
 	@Override
 	public boolean process(@Nullable CorsConfiguration config, ServerWebExchange exchange) {
+
 		ServerHttpRequest request = exchange.getRequest();
 		ServerHttpResponse response = exchange.getResponse();
 		HttpHeaders responseHeaders = response.getHeaders();
@@ -83,15 +85,8 @@ public class DefaultCorsProcessor implements CorsProcessor {
 			}
 		}
 
-		try {
-			if (!CorsUtils.isCorsRequest(request)) {
-				return true;
-			}
-		}
-		catch (IllegalArgumentException ex) {
-			logger.debug("Reject: origin is malformed");
-			rejectRequest(response);
-			return false;
+		if (!CorsUtils.isCorsRequest(request)) {
+			return true;
 		}
 
 		if (responseHeaders.getFirst(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN) != null) {
@@ -160,7 +155,7 @@ public class DefaultCorsProcessor implements CorsProcessor {
 			responseHeaders.setAccessControlAllowMethods(allowMethods);
 		}
 
-		if (preFlightRequest && !CollectionUtils.isEmpty(allowHeaders)) {
+		if (preFlightRequest && !allowHeaders.isEmpty()) {
 			responseHeaders.setAccessControlAllowHeaders(allowHeaders);
 		}
 
@@ -215,6 +210,7 @@ public class DefaultCorsProcessor implements CorsProcessor {
 	 * {@link CorsConfiguration#checkHeaders(List)}.
 	 */
 	@Nullable
+
 	protected List<String> checkHeaders(CorsConfiguration config, List<String> requestHeaders) {
 		return config.checkHeaders(requestHeaders);
 	}
