@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,9 +22,9 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 import java.util.StringJoiner;
 import java.util.function.BiFunction;
 import java.util.function.UnaryOperator;
@@ -485,7 +485,7 @@ final class HierarchicalUriComponents extends UriComponents {
 			if (this.host != null) {
 				uriBuilder.append(this.host);
 			}
-			if (StringUtils.hasText(this.port) && !this.port.equals("-1")) {
+			if (getPort() != -1) {
 				uriBuilder.append(':').append(this.port);
 			}
 		}
@@ -555,20 +555,32 @@ final class HierarchicalUriComponents extends UriComponents {
 
 	@Override
 	public boolean equals(@Nullable Object other) {
-		return (this == other || (other instanceof HierarchicalUriComponents that &&
-				ObjectUtils.nullSafeEquals(getScheme(), that.getScheme()) &&
-				ObjectUtils.nullSafeEquals(getUserInfo(), that.getUserInfo()) &&
-				ObjectUtils.nullSafeEquals(getHost(), that.getHost()) &&
-				getPort() == that.getPort() &&
-				this.path.equals(that.path) &&
-				this.queryParams.equals(that.queryParams) &&
-				ObjectUtils.nullSafeEquals(getFragment(), that.getFragment())));
+		if (this == other) {
+			return true;
+		}
+		if (!(other instanceof HierarchicalUriComponents)) {
+			return false;
+		}
+		HierarchicalUriComponents otherComp = (HierarchicalUriComponents) other;
+		return (ObjectUtils.nullSafeEquals(getScheme(), otherComp.getScheme()) &&
+				ObjectUtils.nullSafeEquals(getUserInfo(), otherComp.getUserInfo()) &&
+				ObjectUtils.nullSafeEquals(getHost(), otherComp.getHost()) &&
+				getPort() == otherComp.getPort() &&
+				this.path.equals(otherComp.path) &&
+				this.queryParams.equals(otherComp.queryParams) &&
+				ObjectUtils.nullSafeEquals(getFragment(), otherComp.getFragment()));
 	}
 
 	@Override
 	public int hashCode() {
-		return Objects.hash(getScheme(), this.userInfo, this.host, this.port,
-				this.path, this.queryParams, getFragment());
+		int result = ObjectUtils.nullSafeHashCode(getScheme());
+		result = 31 * result + ObjectUtils.nullSafeHashCode(this.userInfo);
+		result = 31 * result + ObjectUtils.nullSafeHashCode(this.host);
+		result = 31 * result + ObjectUtils.nullSafeHashCode(this.port);
+		result = 31 * result + this.path.hashCode();
+		result = 31 * result + this.queryParams.hashCode();
+		result = 31 * result + ObjectUtils.nullSafeHashCode(getFragment());
+		return result;
 	}
 
 
@@ -590,25 +602,25 @@ final class HierarchicalUriComponents extends UriComponents {
 		AUTHORITY {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isUnreservedOrSubDelimiter(c) || ':' == c || '@' == c);
+				return isUnreserved(c) || isSubDelimiter(c) || ':' == c || '@' == c;
 			}
 		},
 		USER_INFO {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isUnreservedOrSubDelimiter(c) || ':' == c);
+				return isUnreserved(c) || isSubDelimiter(c) || ':' == c;
 			}
 		},
 		HOST_IPV4 {
 			@Override
 			public boolean isAllowed(int c) {
-				return isUnreservedOrSubDelimiter(c);
+				return isUnreserved(c) || isSubDelimiter(c);
 			}
 		},
 		HOST_IPV6 {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isUnreservedOrSubDelimiter(c) || '[' == c || ']' == c || ':' == c);
+				return isUnreserved(c) || isSubDelimiter(c) || '[' == c || ']' == c || ':' == c;
 			}
 		},
 		PORT {
@@ -620,7 +632,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		PATH {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isPchar(c) || '/' == c);
+				return isPchar(c) || '/' == c;
 			}
 		},
 		PATH_SEGMENT {
@@ -632,7 +644,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		QUERY {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isPchar(c) || '/' == c || '?' == c);
+				return isPchar(c) || '/' == c || '?' == c;
 			}
 		},
 		QUERY_PARAM {
@@ -642,14 +654,14 @@ final class HierarchicalUriComponents extends UriComponents {
 					return false;
 				}
 				else {
-					return (isPchar(c) || '/' == c || '?' == c);
+					return isPchar(c) || '/' == c || '?' == c;
 				}
 			}
 		},
 		FRAGMENT {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isPchar(c) || '/' == c || '?' == c);
+				return isPchar(c) || '/' == c || '?' == c;
 			}
 		},
 		URI {
@@ -658,15 +670,6 @@ final class HierarchicalUriComponents extends UriComponents {
 				return isUnreserved(c);
 			}
 		};
-
-		private static final boolean[] unreservedOrSubDelimiterArray = new boolean[128];
-
-		static {
-			for (int i = 0; i < 128; i++) {
-				char c = (char) i;
-				unreservedOrSubDelimiterArray[i] = (URI.isUnreserved(c) || URI.isSubDelimiter(c));
-			}
-		}
 
 		/**
 		 * Indicates whether the given character is allowed in this URI component.
@@ -703,8 +706,8 @@ final class HierarchicalUriComponents extends UriComponents {
 		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isSubDelimiter(int c) {
-			return ('!' == c || '$' == c || '&' == c || '\'' == c ||
-					'(' == c || ')' == c || '*' == c || '+' == c || ',' == c || ';' == c || '=' == c);
+			return ('!' == c || '$' == c || '&' == c || '\'' == c || '(' == c || ')' == c || '*' == c || '+' == c ||
+					',' == c || ';' == c || '=' == c);
 		}
 
 		/**
@@ -728,16 +731,8 @@ final class HierarchicalUriComponents extends UriComponents {
 		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isPchar(int c) {
-			return (isUnreservedOrSubDelimiter(c) || ':' == c || '@' == c);
+			return (isUnreserved(c) || isSubDelimiter(c) || ':' == c || '@' == c);
 		}
-
-		/**
-		 * Combined check whether a character is unreserved or a sub-delimiter.
-		 */
-		protected boolean isUnreservedOrSubDelimiter(int c) {
-			return (c < unreservedOrSubDelimiterArray.length && c >= 0 && unreservedOrSubDelimiterArray[c]);
-		}
-
 	}
 
 
@@ -768,7 +763,7 @@ final class HierarchicalUriComponents extends UriComponents {
 	}
 
 
-	private static class UriTemplateEncoder implements BiFunction<String, Type, String> {
+	private static class UriTemplateEncoder	implements BiFunction<String, Type, String> {
 
 		private final Charset charset;
 
@@ -839,7 +834,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		 * Whether the given String is a single URI variable that can be
 		 * expanded. It must have '{' and '}' surrounding non-empty text and no
 		 * nested placeholders unless it is a variable with regex syntax,
-		 * for example, {@code "/{year:\d{1,4}}"}.
+		 * e.g. {@code "/{year:\d{1,4}}"}.
 		 */
 		private boolean isUriVariable(CharSequence source) {
 			if (source.length() < 2 || source.charAt(0) != '{' || source.charAt(source.length() -1) != '}') {
@@ -909,7 +904,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		@Override
 		public List<String> getPathSegments() {
 			String[] segments = StringUtils.tokenizeToStringArray(getPath(), PATH_DELIMITER_STRING);
-			return List.of(segments);
+			return Collections.unmodifiableList(Arrays.asList(segments));
 		}
 
 		@Override
@@ -936,8 +931,8 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		@Override
 		public boolean equals(@Nullable Object other) {
-			return (this == other || (other instanceof FullPathComponent fullPathComponent &&
-					getPath().equals(fullPathComponent.getPath())));
+			return (this == other || (other instanceof FullPathComponent &&
+					getPath().equals(((FullPathComponent) other).getPath())));
 		}
 
 		@Override
@@ -956,7 +951,7 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		public PathSegmentComponent(List<String> pathSegments) {
 			Assert.notNull(pathSegments, "List must not be null");
-			this.pathSegments = List.copyOf(pathSegments);
+			this.pathSegments = Collections.unmodifiableList(new ArrayList<>(pathSegments));
 		}
 
 		@Override
@@ -1010,8 +1005,8 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		@Override
 		public boolean equals(@Nullable Object other) {
-			return (this == other || (other instanceof PathSegmentComponent pathSegmentComponent &&
-					getPathSegments().equals(pathSegmentComponent.getPathSegments())));
+			return (this == other || (other instanceof PathSegmentComponent &&
+					getPathSegments().equals(((PathSegmentComponent) other).getPathSegments())));
 		}
 
 		@Override
@@ -1094,7 +1089,6 @@ final class HierarchicalUriComponents extends UriComponents {
 		}
 
 		@Override
-		@Nullable
 		public Object getValue(@Nullable String name) {
 			Object value = this.delegate.getValue(name);
 			if (ObjectUtils.isArray(value)) {
