@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,26 +34,21 @@ import java.time.Duration;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import io.netty.util.Attribute;
 import okhttp3.mockwebserver.MockResponse;
 import okhttp3.mockwebserver.MockWebServer;
 import okhttp3.mockwebserver.RecordedRequest;
-import org.eclipse.jetty.client.Request;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Named;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
-import reactor.core.publisher.Sinks;
-import reactor.netty.channel.ChannelOperations;
 import reactor.netty.http.client.HttpClient;
 import reactor.netty.resources.ConnectionProvider;
 import reactor.test.StepVerifier;
@@ -68,22 +63,18 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpRequest;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.client.reactive.ClientHttpConnector;
 import org.springframework.http.client.reactive.HttpComponentsClientHttpConnector;
-import org.springframework.http.client.reactive.JdkClientHttpConnector;
 import org.springframework.http.client.reactive.JettyClientHttpConnector;
 import org.springframework.http.client.reactive.ReactorClientHttpConnector;
-import org.springframework.http.client.reactive.ReactorNetty2ClientHttpConnector;
 import org.springframework.web.reactive.function.BodyExtractors;
 import org.springframework.web.reactive.function.client.WebClient.ResponseSpec;
 import org.springframework.web.testfixture.xml.Pojo;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.params.provider.Arguments.argumentSet;
 
 /**
  * Integration tests using an {@link ExchangeFunction} through {@link WebClient}.
@@ -99,18 +90,16 @@ class WebClientIntegrationTests {
 
 	@Retention(RetentionPolicy.RUNTIME)
 	@Target(ElementType.METHOD)
-	@ParameterizedTest
+	@ParameterizedTest(name = "[{index}] {0}")
 	@MethodSource("arguments")
 	@interface ParameterizedWebClientTest {
 	}
 
-	static Stream<Arguments> arguments() {
+	static Stream<Named<ClientHttpConnector>> arguments() {
 		return Stream.of(
-				argumentSet("Reactor Netty", new ReactorClientHttpConnector()),
-				argumentSet("Reactor Netty 2", new ReactorNetty2ClientHttpConnector()),
-				argumentSet("JDK", new JdkClientHttpConnector()),
-				argumentSet("Jetty", new JettyClientHttpConnector()),
-				argumentSet("HttpComponents", new HttpComponentsClientHttpConnector())
+				Named.named("Reactor Netty", new ReactorClientHttpConnector()),
+				Named.named("Jetty", new JettyClientHttpConnector()),
+				Named.named("HttpComponents", new HttpComponentsClientHttpConnector())
 		);
 	}
 
@@ -192,53 +181,6 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest
-	void applyAttributesToNativeRequest(ClientHttpConnector connector) {
-		startServer(connector);
-		prepareResponse(response -> {});
-
-		final AtomicReference<Object> nativeRequest = new AtomicReference<>();
-		Mono<Void> result = this.webClient.get()
-				.uri("/pojo")
-				.attribute("foo","bar")
-				.httpRequest(clientHttpRequest -> {
-					if (clientHttpRequest instanceof ChannelOperations<?,?> nettyReq) {
-						nativeRequest.set(nettyReq.channel().attr(ReactorClientHttpConnector.ATTRIBUTES_KEY));
-					}
-					else if (clientHttpRequest instanceof reactor.netty5.channel.ChannelOperations<?,?> nettyReq) {
-						nativeRequest.set(nettyReq.channel().attr(ReactorNetty2ClientHttpConnector.ATTRIBUTES_KEY));
-					}
-					else {
-						nativeRequest.set(clientHttpRequest.getNativeRequest());
-					}
-				})
-				.retrieve()
-				.bodyToMono(Void.class);
-
-		StepVerifier.create(result).expectComplete().verify();
-
-		if (nativeRequest.get() instanceof Attribute<?>) {
-			@SuppressWarnings("unchecked")
-			Attribute<Map<String, Object>> attributes = (Attribute<Map<String, Object>>) nativeRequest.get();
-			assertThat(attributes.get()).isNotNull();
-			assertThat(attributes.get()).containsEntry("foo", "bar");
-		}
-		else if (nativeRequest.get() instanceof io.netty5.util.Attribute<?>) {
-			@SuppressWarnings("unchecked")
-			io.netty5.util.Attribute<Map<String, Object>> attributes =
-					(io.netty5.util.Attribute<Map<String, Object>>) nativeRequest.get();
-			assertThat(attributes.get()).isNotNull();
-			assertThat(attributes.get()).containsEntry("foo", "bar");
-		}
-		else if (nativeRequest.get() instanceof Request nativeReq) {
-			assertThat(nativeReq.getAttributes()).containsEntry("foo", "bar");
-		}
-		else if (nativeRequest.get() instanceof org.apache.hc.core5.http.HttpRequest) {
-			// Attributes are not in the request, but in separate HttpClientContext
-		}
-	}
-
-
-	@ParameterizedWebClientTest
 	void retrieveJsonWithParameterizedTypeReference(ClientHttpConnector connector) {
 		startServer(connector);
 
@@ -249,7 +191,7 @@ class WebClientIntegrationTests {
 		Mono<ValueContainer<Pojo>> result = this.webClient.get()
 				.uri("/json").accept(MediaType.APPLICATION_JSON)
 				.retrieve()
-				.bodyToMono(new ParameterizedTypeReference<>() {});
+				.bodyToMono(new ParameterizedTypeReference<ValueContainer<Pojo>>() {});
 
 		StepVerifier.create(result)
 				.assertNext(c -> assertThat(c.getContainerValue()).isEqualTo(new Pojo("foofoo", "barbar")))
@@ -582,7 +524,6 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest
-	@SuppressWarnings("deprecation")
 	void retrieve500(ClientHttpConnector connector) {
 		startServer(connector);
 
@@ -598,7 +539,7 @@ class WebClientIntegrationTests {
 
 		StepVerifier.create(result)
 				.expectErrorSatisfies(throwable -> {
-					assertThat(throwable).isInstanceOf(WebClientResponseException.class);
+					assertThat(throwable instanceof WebClientResponseException).isTrue();
 					WebClientResponseException ex = (WebClientResponseException) throwable;
 					assertThat(ex.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
 					assertThat(ex.getRawStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR.value());
@@ -690,62 +631,27 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest
-	@SuppressWarnings("deprecation")
 	void retrieve555UnknownStatus(ClientHttpConnector connector) {
 		startServer(connector);
 
 		int errorStatus = 555;
-		assertThat(HttpStatus.resolve(errorStatus)).isNull();
-
+		assertThat((Object) HttpStatus.resolve(errorStatus)).isNull();
 		String errorMessage = "Something went wrong";
-		prepareResponse(response ->
-				response.setResponseCode(errorStatus)
-						.setHeader("Content-Type", "text/plain")
-						.setBody(errorMessage));
+		prepareResponse(response -> response.setResponseCode(errorStatus)
+				.setHeader("Content-Type", "text/plain").setBody(errorMessage));
 
-		Mono<String> result = this.webClient.get().uri("/unknownPage").retrieve().bodyToMono(String.class);
+		Mono<String> result = this.webClient.get()
+				.uri("/unknownPage")
+				.retrieve()
+				.bodyToMono(String.class);
 
 		StepVerifier.create(result)
 				.expectErrorSatisfies(throwable -> {
-					assertThat(throwable).isInstanceOf(UnknownHttpStatusCodeException.class);
+					assertThat(throwable instanceof UnknownHttpStatusCodeException).isTrue();
 					UnknownHttpStatusCodeException ex = (UnknownHttpStatusCodeException) throwable;
 					assertThat(ex.getMessage()).isEqualTo(("Unknown status code ["+errorStatus+"]"));
 					assertThat(ex.getRawStatusCode()).isEqualTo(errorStatus);
-					assertThat(ex.getStatusText()).isEmpty();
-					assertThat(ex.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
-					assertThat(ex.getResponseBodyAsString()).isEqualTo(errorMessage);
-				})
-				.verify(Duration.ofSeconds(3));
-
-		expectRequestCount(1);
-		expectRequest(request -> {
-			assertThat(request.getHeader(HttpHeaders.ACCEPT)).isEqualTo("*/*");
-			assertThat(request.getPath()).isEqualTo("/unknownPage");
-		});
-	}
-
-	@ParameterizedWebClientTest // gh-31202
-	void retrieve929UnknownStatusCode(ClientHttpConnector connector) {
-		startServer(connector);
-
-		int errorStatus = 929;
-		assertThat(HttpStatus.resolve(errorStatus)).isNull();
-
-		String errorMessage = "Something went wrong";
-		prepareResponse(response ->
-				response.setResponseCode(errorStatus)
-						.setHeader("Content-Type", "text/plain")
-						.setBody(errorMessage));
-
-		Mono<String> result = this.webClient.get().uri("/unknownPage").retrieve().bodyToMono(String.class);
-
-		StepVerifier.create(result)
-				.expectErrorSatisfies(throwable -> {
-					assertThat(throwable).isInstanceOf(UnknownHttpStatusCodeException.class);
-					UnknownHttpStatusCodeException ex = (UnknownHttpStatusCodeException) throwable;
-					assertThat(ex.getMessage()).isEqualTo(("Unknown status code ["+errorStatus+"]"));
-					assertThat(ex.getStatusCode().value()).isEqualTo(errorStatus);
-					assertThat(ex.getStatusText()).isEmpty();
+					assertThat(ex.getStatusText()).isEqualTo("");
 					assertThat(ex.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
 					assertThat(ex.getResponseBodyAsString()).isEqualTo(errorMessage);
 				})
@@ -789,7 +695,7 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest  // SPR-16246
-	void postLargeTextFile(ClientHttpConnector connector) {
+	void postLargeTextFile(ClientHttpConnector connector) throws Exception {
 		startServer(connector);
 
 		prepareResponse(response -> {});
@@ -811,8 +717,8 @@ class WebClientIntegrationTests {
 			ByteArrayOutputStream bos = new ByteArrayOutputStream();
 			try {
 				request.getBody().copyTo(bos);
-				String actual = bos.toString(StandardCharsets.UTF_8);
-				String expected = Files.readString(resource.getFile().toPath(), StandardCharsets.UTF_8);
+				String actual = bos.toString("UTF-8");
+				String expected = new String(Files.readAllBytes(resource.getFile().toPath()), StandardCharsets.UTF_8);
 				assertThat(actual).isEqualTo(expected);
 			}
 			catch (IOException ex) {
@@ -831,7 +737,7 @@ class WebClientIntegrationTests {
 		Mono<String> result = this.webClient.get()
 				.uri("/greeting")
 				.retrieve()
-				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.just(new MyException("500 error!")))
+				.onStatus(HttpStatus::is5xxServerError, response -> Mono.just(new MyException("500 error!")))
 				.bodyToMono(String.class);
 
 		StepVerifier.create(result)
@@ -855,8 +761,8 @@ class WebClientIntegrationTests {
 		Mono<String> result = this.webClient.get()
 				.uri("/greeting")
 				.retrieve()
-				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.just(new MyException("500 error!")))
-				.bodyToMono(new ParameterizedTypeReference<>() {});
+				.onStatus(HttpStatus::is5xxServerError, response -> Mono.just(new MyException("500 error!")))
+				.bodyToMono(new ParameterizedTypeReference<String>() {});
 
 		StepVerifier.create(result)
 				.expectError(MyException.class)
@@ -882,7 +788,7 @@ class WebClientIntegrationTests {
 		Mono<String> result = this.webClient.get()
 				.uri("/json")
 				.retrieve()
-				.onStatus(HttpStatusCode::isError,
+				.onStatus(HttpStatus::isError,
 						response -> response.bodyToMono(Pojo.class)
 								.flatMap(pojo -> Mono.error(new MyException(pojo.getFoo())))
 				)
@@ -931,7 +837,7 @@ class WebClientIntegrationTests {
 		Mono<String> result = this.webClient.get()
 				.uri("/greeting")
 				.retrieve()
-				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.empty())
+				.onStatus(HttpStatus::is5xxServerError, response -> Mono.empty())
 				.bodyToMono(String.class);
 
 		StepVerifier.create(result)
@@ -947,12 +853,6 @@ class WebClientIntegrationTests {
 
 	@ParameterizedWebClientTest
 	void statusHandlerSuppressedErrorSignalWithFlux(ClientHttpConnector connector) {
-
-		// Temporarily disabled, leads to io.netty5.buffer.BufferClosedException
-		if (connector instanceof ReactorNetty2ClientHttpConnector) {
-			return;
-		}
-
 		startServer(connector);
 
 		prepareResponse(response -> response.setResponseCode(500)
@@ -961,7 +861,7 @@ class WebClientIntegrationTests {
 		Flux<String> result = this.webClient.get()
 				.uri("/greeting")
 				.retrieve()
-				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.empty())
+				.onStatus(HttpStatus::is5xxServerError, response -> Mono.empty())
 				.bodyToFlux(String.class);
 
 		StepVerifier.create(result)
@@ -986,7 +886,7 @@ class WebClientIntegrationTests {
 		Mono<ResponseEntity<String>> result = this.webClient.get()
 				.uri("/").accept(MediaType.APPLICATION_JSON)
 				.retrieve()
-				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.empty())// use normal response
+				.onStatus(HttpStatus::is5xxServerError, response -> Mono.empty())// use normal response
 				.toEntity(String.class);
 
 		StepVerifier.create(result)
@@ -1150,12 +1050,11 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest
-	@SuppressWarnings("deprecation")
 	void exchangeForUnknownStatusCode(ClientHttpConnector connector) {
 		startServer(connector);
 
 		int errorStatus = 555;
-		assertThat(HttpStatus.resolve(errorStatus)).isNull();
+		assertThat((Object) HttpStatus.resolve(errorStatus)).isNull();
 		String errorMessage = "Something went wrong";
 		prepareResponse(response -> response.setResponseCode(errorStatus)
 				.setHeader("Content-Type", "text/plain").setBody(errorMessage));
@@ -1255,7 +1154,7 @@ class WebClientIntegrationTests {
 
 		prepareResponse(response -> response
 				.setHeader("Content-Type", "text/plain")
-				.addHeader("Set-Cookie", "testkey1=testvalue1") // TODO invalid ";" at the end
+				.addHeader("Set-Cookie", "testkey1=testvalue1;")
 				.addHeader("Set-Cookie", "testkey2=testvalue2; Max-Age=42; HttpOnly; SameSite=Lax; Secure")
 				.setBody("test"));
 
@@ -1285,6 +1184,23 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest
+	void invalidDomain(ClientHttpConnector connector) {
+		startServer(connector);
+
+		String url = "http://example.invalid";
+		Mono<Void> result = this.webClient.get().uri(url).retrieve().bodyToMono(Void.class);
+
+		StepVerifier.create(result)
+				.expectErrorSatisfies(throwable -> {
+					assertThat(throwable).isInstanceOf(WebClientRequestException.class);
+					WebClientRequestException ex = (WebClientRequestException) throwable;
+					assertThat(ex.getMethod()).isEqualTo(HttpMethod.GET);
+					assertThat(ex.getUri()).isEqualTo(URI.create(url));
+				})
+				.verify();
+	}
+
+	@ParameterizedWebClientTest
 	void malformedResponseChunksOnBodilessEntity(ClientHttpConnector connector) {
 		Mono<?> result = doMalformedChunkedResponseTest(connector, ResponseSpec::toBodilessEntity);
 		StepVerifier.create(result)
@@ -1308,36 +1224,15 @@ class WebClientIntegrationTests {
 				.verify(Duration.ofSeconds(3));
 	}
 
-	@ParameterizedWebClientTest
-	void retrieveTextDecodedToFlux(ClientHttpConnector connector) {
-		startServer(connector);
-
-		prepareResponse(response -> response
-				.setHeader("Content-Type", "text/plain")
-				.setBody("Hey now"));
-
-		Flux<String> result = this.webClient.get()
-				.uri("/")
-				.accept(MediaType.TEXT_PLAIN)
-				.retrieve()
-				.bodyToFlux(String.class);
-
-		StepVerifier.create(result)
-				.expectNext("Hey now")
-				.expectComplete()
-				.verify(Duration.ofSeconds(3));
-	}
-
 	private <T> Mono<T> doMalformedChunkedResponseTest(
 			ClientHttpConnector connector, Function<ResponseSpec, Mono<T>> handler) {
 
-		Sinks.One<Integer> portSink = Sinks.one();
+		@SuppressWarnings("deprecation")
+		int port = org.springframework.util.SocketUtils.findAvailableTcpPort();
 
 		Thread serverThread = new Thread(() -> {
 			// No way to simulate a malformed chunked response through MockWebServer.
-			try (ServerSocket serverSocket = new ServerSocket(0)) {
-				Sinks.EmitResult result = portSink.tryEmitValue(serverSocket.getLocalPort());
-				assertThat(result).isEqualTo(Sinks.EmitResult.OK);
+			try (ServerSocket serverSocket = new ServerSocket(port)) {
 				Socket socket = serverSocket.accept();
 				InputStream is = socket.getInputStream();
 
@@ -1345,13 +1240,10 @@ class WebClientIntegrationTests {
 				is.read(new byte[4096]);
 
 				OutputStream os = socket.getOutputStream();
-				os.write("""
-						HTTP/1.1 200 OK
-						Transfer-Encoding: chunked
-
-						lskdu018973t09sylgasjkfg1][]'./.sdlv"""
-						.replace("\n", "\r\n").getBytes(StandardCharsets.UTF_8));
-
+				os.write("HTTP/1.1 200 OK\r\n".getBytes(StandardCharsets.UTF_8));
+				os.write("Transfer-Encoding: chunked\r\n".getBytes(StandardCharsets.UTF_8));
+				os.write("\r\n".getBytes(StandardCharsets.UTF_8));
+				os.write("lskdu018973t09sylgasjkfg1][]'./.sdlv".getBytes(StandardCharsets.UTF_8));
 				socket.close();
 			}
 			catch (IOException ex) {
@@ -1361,13 +1253,12 @@ class WebClientIntegrationTests {
 
 		serverThread.start();
 
-		return portSink.asMono().flatMap(port -> {
-			WebClient client = WebClient.builder()
-					.clientConnector(connector)
-					.baseUrl("http://localhost:" + port)
-					.build();
-			return handler.apply(client.post().retrieve());
-		});
+		WebClient client = WebClient.builder()
+				.clientConnector(connector)
+				.baseUrl("http://localhost:" + port)
+				.build();
+
+		return handler.apply(client.post().retrieve());
 	}
 
 	private void prepareResponse(Consumer<MockResponse> consumer) {
@@ -1412,5 +1303,4 @@ class WebClientIntegrationTests {
 			this.containerValue = containerValue;
 		}
 	}
-
 }
