@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,16 +23,15 @@ import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
 
+import javax.servlet.ServletException;
+import javax.servlet.http.HttpServletResponse;
+
 import freemarker.template.Configuration;
 import freemarker.template.SimpleHash;
 import freemarker.template.Template;
 import freemarker.template.TemplateException;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServletResponse;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.condition.DisabledForJreRange;
-import org.junit.jupiter.api.condition.JRE;
 
 import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.core.io.ClassPathResource;
@@ -50,6 +49,7 @@ import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
 import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
 import org.springframework.web.testfixture.servlet.MockServletContext;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
@@ -58,7 +58,6 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author Sam Brannen
  * @since 25.01.2005
  */
-@SuppressWarnings("deprecation")
 public class FreeMarkerMacroTests {
 
 	private static final String TEMPLATE_FILE = "test.ftl";
@@ -77,7 +76,7 @@ public class FreeMarkerMacroTests {
 
 
 	@BeforeEach
-	void setUp() throws Exception {
+	public void setUp() throws Exception {
 		this.templateLoaderPath = Files.createTempDirectory("servlet-").toAbsolutePath();
 
 		fc.setTemplateLoaderPaths("classpath:/", "file://" + this.templateLoaderPath);
@@ -95,7 +94,7 @@ public class FreeMarkerMacroTests {
 
 
 	@Test
-	void testExposeSpringMacroHelpers() throws Exception {
+	public void testExposeSpringMacroHelpers() throws Exception {
 		FreeMarkerView fv = new FreeMarkerView() {
 			@Override
 			@SuppressWarnings("rawtypes")
@@ -118,7 +117,7 @@ public class FreeMarkerMacroTests {
 	}
 
 	@Test
-	void testSpringMacroRequestContextAttributeUsed() {
+	public void testSpringMacroRequestContextAttributeUsed() {
 		final String helperTool = "wrongType";
 
 		FreeMarkerView fv = new FreeMarkerView() {
@@ -143,143 +142,140 @@ public class FreeMarkerMacroTests {
 	}
 
 	@Test
-	void testName() throws Exception {
+	public void testName() throws Exception {
 		assertThat(getMacroOutput("NAME")).isEqualTo("Darren");
 	}
 
 	@Test
-	@DisabledForJreRange(min = JRE.JAVA_21)
 	public void testAge() throws Exception {
 		assertThat(getMacroOutput("AGE")).isEqualTo("99");
 	}
 
 	@Test
-	void testMessage() throws Exception {
+	public void testMessage() throws Exception {
 		assertThat(getMacroOutput("MESSAGE")).isEqualTo("Howdy Mundo");
 	}
 
 	@Test
-	void testDefaultMessage() throws Exception {
+	public void testDefaultMessage() throws Exception {
 		assertThat(getMacroOutput("DEFAULTMESSAGE")).isEqualTo("hi planet");
 	}
 
 	@Test
-	void testMessageArgs() throws Exception {
+	public void testMessageArgs() throws Exception {
 		assertThat(getMacroOutput("MESSAGEARGS")).isEqualTo("Howdy[World]");
 	}
 
 	@Test
-	void testMessageArgsWithDefaultMessage() throws Exception {
+	public void testMessageArgsWithDefaultMessage() throws Exception {
 		assertThat(getMacroOutput("MESSAGEARGSWITHDEFAULTMESSAGE")).isEqualTo("Hi");
 	}
 
 	@Test
-	void testTheme() throws Exception {
+	public void testTheme() throws Exception {
 		assertThat(getMacroOutput("THEME")).isEqualTo("Howdy! Mundo!");
 	}
 
 	@Test
-	void testDefaultTheme() throws Exception {
+	public void testDefaultTheme() throws Exception {
 		assertThat(getMacroOutput("DEFAULTTHEME")).isEqualTo("hi! planet!");
 	}
 
 	@Test
-	void testThemeArgs() throws Exception {
+	public void testThemeArgs() throws Exception {
 		assertThat(getMacroOutput("THEMEARGS")).isEqualTo("Howdy![World]");
 	}
 
 	@Test
-	void testThemeArgsWithDefaultMessage() throws Exception {
+	public void testThemeArgsWithDefaultMessage() throws Exception {
 		assertThat(getMacroOutput("THEMEARGSWITHDEFAULTMESSAGE")).isEqualTo("Hi!");
 	}
 
 	@Test
-	void testUrl() throws Exception {
+	public void testUrl() throws Exception {
 		assertThat(getMacroOutput("URL")).isEqualTo("/springtest/aftercontext.html");
 	}
 
 	@Test
-	void testUrlParams() throws Exception {
+	public void testUrlParams() throws Exception {
 		assertThat(getMacroOutput("URLPARAMS")).isEqualTo("/springtest/aftercontext/bar?spam=bucket");
 	}
 
 	@Test
-	void testForm1() throws Exception {
+	public void testForm1() throws Exception {
 		assertThat(getMacroOutput("FORM1")).isEqualTo("<input type=\"text\" id=\"name\" name=\"name\" value=\"Darren\" >");
 	}
 
 	@Test
-	void testForm2() throws Exception {
+	public void testForm2() throws Exception {
 		assertThat(getMacroOutput("FORM2")).isEqualTo("<input type=\"text\" id=\"name\" name=\"name\" value=\"Darren\" class=\"myCssClass\" >");
 	}
 
 	@Test
-	void testForm3() throws Exception {
+	public void testForm3() throws Exception {
 		assertThat(getMacroOutput("FORM3")).isEqualTo("<textarea id=\"name\" name=\"name\" >\nDarren</textarea>");
 	}
 
 	@Test
-	void testForm4() throws Exception {
+	public void testForm4() throws Exception {
 		assertThat(getMacroOutput("FORM4")).isEqualTo("<textarea id=\"name\" name=\"name\" rows=10 cols=30>\nDarren</textarea>");
 	}
 
 	// TODO verify remaining output for forms 5, 6, 7, 8, and 14 (fix whitespace)
 
 	@Test
-	void testForm9() throws Exception {
+	public void testForm9() throws Exception {
 		assertThat(getMacroOutput("FORM9")).isEqualTo("<input type=\"password\" id=\"name\" name=\"name\" value=\"\" >");
 	}
 
 	@Test
-	void testForm10() throws Exception {
+	public void testForm10() throws Exception {
 		assertThat(getMacroOutput("FORM10")).isEqualTo("<input type=\"hidden\" id=\"name\" name=\"name\" value=\"Darren\" >");
 	}
 
 	@Test
-	void testForm11() throws Exception {
+	public void testForm11() throws Exception {
 		assertThat(getMacroOutput("FORM11")).isEqualTo("<input type=\"text\" id=\"name\" name=\"name\" value=\"Darren\" >");
 	}
 
 	@Test
-	void testForm12() throws Exception {
+	public void testForm12() throws Exception {
 		assertThat(getMacroOutput("FORM12")).isEqualTo("<input type=\"hidden\" id=\"name\" name=\"name\" value=\"Darren\" >");
 	}
 
 	@Test
-	void testForm13() throws Exception {
+	public void testForm13() throws Exception {
 		assertThat(getMacroOutput("FORM13")).isEqualTo("<input type=\"password\" id=\"name\" name=\"name\" value=\"\" >");
 	}
 
 	@Test
-	void testForm15() throws Exception {
+	public void testForm15() throws Exception {
 		String output = getMacroOutput("FORM15");
-		assertThat(output).as("Wrong output: " + output)
-				.startsWith("<input type=\"hidden\" name=\"_name\" value=\"on\"/>");
-		assertThat(output).as("Wrong output: " + output)
-				.contains("<input type=\"checkbox\" id=\"name\" name=\"name\" />");
+		assertThat(output.startsWith("<input type=\"hidden\" name=\"_name\" value=\"on\"/>")).as("Wrong output: " + output).isTrue();
+		assertThat(output.contains("<input type=\"checkbox\" id=\"name\" name=\"name\" />")).as("Wrong output: " + output).isTrue();
 	}
 
 	@Test
-	void testForm16() throws Exception {
+	public void testForm16() throws Exception {
 		String output = getMacroOutput("FORM16");
-		assertThat(output).as("Wrong output: " + output)
-				.startsWith("<input type=\"hidden\" name=\"_jedi\" value=\"on\"/>");
-		assertThat(output).as("Wrong output: " + output)
-				.contains("<input type=\"checkbox\" id=\"jedi\" name=\"jedi\" checked=\"checked\" />");
+		assertThat(output.startsWith(
+				"<input type=\"hidden\" name=\"_jedi\" value=\"on\"/>")).as("Wrong output: " + output).isTrue();
+		assertThat(output.contains(
+				"<input type=\"checkbox\" id=\"jedi\" name=\"jedi\" checked=\"checked\" />")).as("Wrong output: " + output).isTrue();
 	}
 
 	@Test
-	void testForm17() throws Exception {
+	public void testForm17() throws Exception {
 		assertThat(getMacroOutput("FORM17")).isEqualTo("<input type=\"text\" id=\"spouses0.name\" name=\"spouses[0].name\" value=\"Fred\" >");
 	}
 
 	@Test
-	void testForm18() throws Exception {
+	public void testForm18() throws Exception {
 		String output = getMacroOutput("FORM18");
-		assertThat(output).as("Wrong output: " + output)
-				.startsWith("<input type=\"hidden\" name=\"_spouses[0].jedi\" value=\"on\"/>");
-		assertThat(output).as("Wrong output: " + output)
-				.contains("<input type=\"checkbox\" id=\"spouses0.jedi\" name=\"spouses[0].jedi\" checked=\"checked\" />");
+		assertThat(output.startsWith(
+				"<input type=\"hidden\" name=\"_spouses[0].jedi\" value=\"on\"/>")).as("Wrong output: " + output).isTrue();
+		assertThat(output.contains(
+				"<input type=\"checkbox\" id=\"spouses0.jedi\" name=\"spouses[0].jedi\" checked=\"checked\" />")).as("Wrong output: " + output).isTrue();
 	}
 
 
@@ -351,9 +347,8 @@ public class FreeMarkerMacroTests {
 	}
 
 	private void storeTemplateInTempDir(String macro) throws IOException {
-		Files.writeString(this.templateLoaderPath.resolve("tmp.ftl"),
-				"<#import \"spring.ftl\" as spring />\n" + macro
-		);
+		Files.write(this.templateLoaderPath.resolve("tmp.ftl"),
+				("<#import \"spring.ftl\" as spring />\n" + macro).getBytes(UTF_8));
 	}
 
 	private String getOutput() throws IOException {
